--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-24 [美商务部长誓言保留对华为采取行动的可能性](/articles/dw/1040151.md)
+
 9-24 [欧盟近20国支持谭德塞连任世卫秘书长](/articles/dw/1040152.md)
 
 9-24 [IMF总裁卷入假造中国数据丑闻  遭英媒抨击应下台](/articles/dw/1040153.md)
@@ -598,6 +600,4 @@
 9-7 [支联会递交信件给警务处长 香港多人还押超过200日](/articles/dw/1040449.md)
 
 9-7 [塔利班：拿下阿富汗最後一省「国内战争结束」](/articles/dw/1040450.md)
-
-9-7 [新疆人权活动家遭禁入哈萨克](/articles/dw/1040451.md)
 
