--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-24 [雷蒙多：若有必要会对华为采取进一步行动](/articles/voa/1038006.md)
+
 9-24 [如果塔利班承认中国政府虐待维吾尔穆斯林，可能会提高其声誉](/articles/voa/1038007.md)
 
 9-24 [美众院通过《国防授权法》 点明中国人权问题 将加强与台湾防务合作](/articles/voa/1038008.md)
@@ -598,6 +600,4 @@
 9-11 [涉嫌违反国际伦理道德 两家著名国际期刊罕见撤销已发表的中国科研论文](/articles/voa/1038304.md)
 
 9-11 [对年轻一代的纽约人来说9/11意味着什么？](/articles/voa/1038305.md)
-
-9-11 [五角大楼消防员回顾9/11灾难现场救援行动](/articles/voa/1038306.md)
 
