--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-17 [南风窗｜研究生也去干保洁了，“存钱最重要”](/articles/cdt/341637.md)
+
+4-17 [非虚构故事｜这简直就是入室抢劫！](/articles/cdt/341641.md)
+
+4-17 [【网络民议】一季度全国居民人均可支配收入11539元，”今日份幽默已送达”](/articles/cdt/341647.md)
+
+4-17 [【网络民议】“我以为中国只有足球有假球，想不到马拉松都可以这样玩”](/articles/cdt/341656.md)
+
 4-17 [每日一语 2024.4.16](/articles/cdt/341658.md)
 
 4-17 [夏冰｜北京半程马拉松是如何陷入舆论漩涡的?](/articles/cdt/341661.md)
@@ -592,12 +600,4 @@
 3-14 [衣者褚｜他们总是这么一本正经地说假话](/articles/cdt/342674.md)
 
 3-14 [基本常识｜冀外媒体央视记者采访燕郊爆炸事故，安的是什么心？](/articles/cdt/342676.md)
-
-3-14 [每日一语 2024.3.13](/articles/cdt/342679.md)
-
-3-14 [【404媒体】“如果不对当时的社会制度进行整体变革，那么妇女参政只是加入一个男人们的分赃体”（外二篇）](/articles/cdt/342685.md)
-
-3-13 [色彩房｜《“农夫山泉”往事》](/articles/cdt/342694.md)
-
-3-13 [【CDTV】央视记者燕郊采访爆燃事故遇阻，党的喉舌被党掐脖子](/articles/cdt/342699.md)
 
