--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-17 [所罗门群岛举行全国大选 美国驳斥中俄指其干涉选举的指控](/articles/voa/1016329.md)
+
+4-17 [美中防长通话 中国就台湾与南中国海议题呛声 美军机随后飞越台湾海峡](/articles/voa/1016330.md)
+
 4-17 [美国、欧盟拟对伊朗实施进一步制裁](/articles/voa/1016331.md)
 
 4-17 [阿根廷右翼总统米莱的现实困境：和中国脱钩之路有多难？](/articles/voa/1016332.md)
@@ -596,8 +600,4 @@
 4-5 [台湾强震后救援持续进行 已累计有12人死亡](/articles/voa/1016627.md)
 
 4-5 [以哈战争六个月--哈马斯没被摧毁，以色列却日渐孤立](/articles/voa/1016628.md)
-
-4-5 [担忧中国产能过剩造成威胁 耶伦呼吁中国为美国企业创造“公平竞争的环境”](/articles/voa/1016629.md)
-
-4-5 [地处地震多发带，台湾应对地震经验丰富、反应迅速](/articles/voa/1016630.md)
 
