--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-17 [澳大利亚公布新国防战略 增加军费开支着眼中国威胁](/articles/voa/1016328.md)
+
 4-17 [所罗门群岛举行全国大选 美国驳斥中俄指其干涉选举的指控](/articles/voa/1016329.md)
 
 4-17 [美中防长通话 中国就台湾与南中国海议题呛声 美军机随后飞越台湾海峡](/articles/voa/1016330.md)
@@ -598,6 +600,4 @@
 4-5 [中国核电快速发展 信息不透明带来安全隐患](/articles/voa/1016626.md)
 
 4-5 [台湾强震后救援持续进行 已累计有12人死亡](/articles/voa/1016627.md)
-
-4-5 [以哈战争六个月--哈马斯没被摧毁，以色列却日渐孤立](/articles/voa/1016628.md)
 
