--- a/articles/rfi/999954.md
+++ b/articles/rfi/999954.md
@@ -1,5 +1,5 @@
-<!--1713305701000-->
-[所罗门群岛将举行全国选举](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240416-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE)
+<!--1713318302000-->
+[巴黎奥运将进入百日倒计时](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6)
 ------
 
-<div>16/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/72f66436-fa84-11ee-9d74-005056bf30b7/w:1280/p:16x9/2024-03-25T051154Z_17230021_RC2O02AQY5SK_RTRMADP_3_SOLOMONISLANDS-ELECTION.JPG"><p><strong></strong></p><div><p>大约 6780 名选举官员将参与其中—是 2019 年选举人数的两倍，因为选民还将选出新的省议会和霍尼亚拉市议会。为了防止发生骚乱，澳大利亚、新西兰和巴布亚新几内亚等邻国已在选举期间派出警察协助维持安全，因为此前选举之后都会出现一段时期的骚乱。</p><p>夏威夷大学太平洋岛屿研究中心副教授兼前主任塔西修斯·卡布陶拉卡称，这次选举“可能是所罗门群岛自独立以来最重要的一次”，因为该国持续存在的经济问题及其在中美之间更大竞争中所扮演的角色。</p><p>对于外国观察家来说，主要问题是所罗门群岛与中国的持续关系以及总理索加瓦雷是否会再次当选。索加瓦雷因在 2019 年将外交承认从台湾转为中国而闻名于海外。</p><p>这一有争议的决定引发了骚乱，2021 年 11 月，抗议者瞄准霍尼亚拉的唐人街，并试图冲进索加瓦雷的住所，应政府要求，在澳大利亚警察特遣队的帮助下恢复了和平。</p><p>随后在 2022 年，索加瓦雷与北京签署了一项秘密安全协议，引起了澳大利亚、新西兰和美国的恐慌，这些国家担心中国有一天可能会在那里建立海军基地，从而极大地扩大北京的军事影响力，该岛链位于澳大利亚布里斯班市以东约 2000 公里（1200 英里）处，距中国上海市东南部仅 6000 多公里（3728 英里）处。</p><p>索加瓦雷的最高职位竞争对手之一、直言不讳的国会议员、该国第一任总理的儿子小彼得·凯尼洛雷亚 (Peter Kenilorea Jr) 已承诺将与台湾建立关系。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240416-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%25B0%2586%25E4%25B8%25BE%25E8%25A1%258C%25E5%2585%25A8%25E5%259B%25BD%25E9%2580%2589%25E4%25B8%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE%20-%20https%3A%2F%2Frfi.my%2FAWUK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%B0%86%E4%B8%BE%E8%A1%8C%E5%85%A8%E5%9B%BD%E9%80%89%E4%B8%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:47</div><img src="https://s.rfi.fr/media/display/7a533db2-fc32-11ee-9fbf-005056a97e36/w:1280/p:16x9/6db39559f747e0f1053aa6446f413ae46fbba34b-1.png"><p><strong></strong></p><div><p>为了满足大众的需求，这些门票中有一半的价格将低于 100 欧元，只有 5% 的门票价格超过 400 欧元。</p><p>16日，法国游泳奥运冠军劳瑞·马努多(Laure Manoudu)成为奥运圣火传递第二位火炬手。根据日程安排，奥运火炬将在希腊境内进行为期9天的传递，于4月26日离开希腊前往法国。4月26日下午17:30在泛雅典体育场，与巴黎奥组委代表团完成交接仪式。</p><p>交接结束后，圣火将在雅典的法国大使馆过夜，第二天登上三桅船“贝伦”号前往法国马赛，并于当地时间5月8日开始在法国展开为期68天的传递活动。最终将于当地时间7月26日，在巴黎点燃万众瞩目的主火炬，宣告第33届夏季奥运会正式开幕。</p><p>巴黎奥运会将于7月26日开幕。4月17日，法国巴黎将迎来夏季奥运会开幕倒计时100天。</p><p>法国总统马克龙15日在接受法国媒体采访时谈到了即将于7月26日在塞纳河上举行的巴黎奥运会开幕式，他表示如果安全风险过高，可能会放弃在塞纳河上举办。</p><p>马克龙表示，“我们可能会限制人数将开幕式放在特罗卡德罗广场举行，甚至是改在法兰西体育场举行。”</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWUI.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E5%25B7%25B4%25E9%25BB%258E%25E5%25A5%25A5%25E8%25BF%2590%25E5%25B0%2586%25E8%25BF%259B%25E5%2585%25A5%25E7%2599%25BE%25E6%2597%25A5%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6%20-%20https%3A%2F%2Frfi.my%2FAWUI.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6%20-%20https%3A%2F%2Frfi.my%2FAWUI.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWUI.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B7%B4%E9%BB%8E%E5%A5%A5%E8%BF%90%E5%B0%86%E8%BF%9B%E5%85%A5%E7%99%BE%E6%97%A5%E5%80%92%E8%AE%A1%E6%97%B6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
