--- a/articles/rfi/999963.md
+++ b/articles/rfi/999963.md
@@ -1,5 +1,5 @@
-<!--1713293102000-->
-[在中国 持不同政见者及其亲朋不断受攻击和骚扰](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E5%9C%A8%E4%B8%AD%E5%9B%BD-%E6%8C%81%E4%B8%8D%E5%90%8C%E6%94%BF%E8%A7%81%E8%80%85%E5%8F%8A%E5%85%B6%E4%BA%B2%E6%9C%8B%E4%B8%8D%E6%96%AD%E5%8F%97%E6%94%BB%E5%87%BB%E5%92%8C%E9%AA%9A%E6%89%B0)
+<!--1713300302000-->
+[美国众议院本周或就援助乌克兰以色列及台湾等法案进行独立投票？](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8)
 ------
 
-<div>16/04/2024 - 19:45</div><img src="https://s.rfi.fr/media/display/776652e8-5832-11ec-9be5-005056a90284/w:1280/p:16x9/rq.svg.png"><p><strong>在中国，持不同政见者及其亲人不断受到骚扰，这是世界报近日报道指出的。 根据非政府组织“中国人权卫士（CHRD）”称，中国当局会毫不犹豫地攻击中国人权卫士的子女，以粉碎任何抵抗企图。         </strong></p><div><p>世界报记者勒帕特的报道指出，在中国，异议人士及其亲人不断受到骚扰。在报道中，他就一张法新社的相片向读者指出，在这照片中，我们看到一名身穿黑色夹克、骑着蓝色电动滑板车的男子似乎在一栋大楼前站岗。 照片的作者是一名13岁的孩子。 他拍摄了最近几天跟踪他的其他黑衣人。  </p><p style="text-align:left">他的母亲48 岁的 <strong>可可(</strong>化名），向《世界报》分享了这些照片。 她疑惑问道：“他的哥哥已经入狱了，为什么还要针对一个13岁的孩子？“ 可可知道，骚扰年幼的儿子是为了阻止她和丈夫保护他们的大儿子，大儿子于 2020 年因“煽动骚乱”和“侵犯他人隐私”罪名被判处 14 年监禁。  </p><p style="text-align:left">牛腾宇随后被指控为一家传播有关中国国家主席习近平女儿信息的网站工作。  </p><p style="text-align:left">在他母亲的眼中，他是一个替罪羊，为网站的创始人受罚，而这些创始人都在国外。 四年来，可可一直是中国警察国家的受害者。  </p><p style="text-align:left">她经常遭受死亡威胁，当局向她的朋友们采取诽谤她的行动，她无法谋生，甚至无法入睡：她居住的河南省（中国中部）说，她家每天晚上都会发出刺耳的噪音。 。 2024 年初，她的丈夫被拘留了几周只，因为试图探望被监禁在广东省（东南部）的儿子。 </p><p style="text-align:left">尽管情况极端，但牛腾宇父母的情况在国内并不罕见。 人权组织联盟《中国人权卫士（CHRD）》在题为“如果我不服从，我的家人将受苦”的报告中引用了他们的案例以及其他大约20个案例。 </p><p style="text-align:left"><strong>“集体惩罚”：</strong> </p><p style="text-align:left">总部位于华盛顿的该非政府组织，列出了 2023 年全年针对人权活动人士的袭击清单。  </p><p style="text-align:left">该组织谴责道：“中国当局集体惩罚人权捍卫者的家人，包括幼儿。 这些惩罚没有法律依据，但对中国大陆居民和海外侨民造成了严重后果。 国际法禁止集体惩罚行为是国际法所禁止的。” </p><p style="text-align:left">该组织所提到的那些做法并不新鲜，但本报告的重点是 2023 年，24 页文件中引用的大多数活动人士在几年前就被定罪，并被释放了。 </p><p style="text-align:left">报告指出，“中国当局几十年来一直使用这些策略，造成巨大损失而不受惩罚。 寻求赔偿往往会引发警方进一步的骚扰、暴行和一些毫无根据的诉讼。” </p><p style="text-align:left">报告中被提及的受害者包括数名律师、公民记者张展（自 2020 年以来因报道新冠疫情之初武汉封城的报道而被拘留），以及彭利发（2022 年在北京一座大桥上，他举着批评中国共产党和限制公民的横幅）。 同时，那些维吾尔族和藏族的社区也成为集体攻击目标。 </p><p style="text-align:left">“警察常驻在我们门外” 该报告特别令人震惊的是，它详细介绍了儿童们的待遇，这些儿童被用作向父母施加压力的手段。 这是致力于捍卫人权的著名律师王全章家人的案例，王全章于 2015 年在一场导致 300 多名律师被捕的运动中失踪。<strong> 王全璋</strong>于2015年至2020年因“颠覆国家政权”罪被监禁，虽然根据文件他现已正式获释四年了，但他的磨难却仍在继续着。 </p><p style="text-align:left"><strong>王全璋</strong>和他的家人不断受到警方的骚扰，他的妻子李文足必须为他辩护，以至于2015年起，他们夫妇俩都不能亲自送儿子上学。 </p><p style="text-align:left">根据 CHRD 引述了自己也成为活动人士的李文足的见证说：“自3月8日以来，我们不得不依靠邻居的好心帮忙。因为警察一直在我们家门前看守站岗，不让我和丈夫外出。” </p><p style="text-align:left">经过多年没有父亲后，王全璋的儿子，11 岁的儿子“泉泉”，其如今在警察对全家进行驱逐和骚扰的情况下长大。 </p><p style="text-align:left">李文足女士继续说道：“一天晚上，我们在接宿我们的一位朋友家，被猛烈敲门声吵醒。 泉泉吓得一晚上都抱着我，浑身发抖。”。 警察声称正在寻找毒品。 其他时候，是朋友公寓的房东会来拜访，并通知他们必须离开住房，而且为了加快驱逐的速度，并说要切断住房的水和煤气。 或者是泉泉学校，在当局的压力下将这孩子拒之校门外。  </p><p style="text-align:left">人权捍卫者委员会 CHRD 还援引了居住在国外的维吾尔族或藏人的案例，他们受到警方的远程威胁，如果他们的家人为亲人或社区动员起来，就会遭到报复。  </p><p style="text-align:left">每次，当局的目标似乎都是粉碎那些拒绝承认自己有罪的被告们的抵抗行动（并且总是受到更严厉的惩罚）或是因为这些异议人士亲人为他们动员起来的任何抵抗企图。  </p><p style="text-align:left">牛腾宇的母亲可可在电话里叹息道。：“我想他们想要的就是：让我消失。” </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWTB.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E5%259C%25A8%25E4%25B8%25AD%25E5%259B%25BD-%25E6%258C%2581%25E4%25B8%258D%25E5%2590%258C%25E6%2594%25BF%25E8%25A7%2581%25E8%2580%2585%25E5%258F%258A%25E5%2585%25B6%25E4%25BA%25B2%25E6%259C%258B%25E4%25B8%258D%25E6%2596%25AD%25E5%258F%2597%25E6%2594%25BB%25E5%2587%25BB%25E5%2592%258C%25E9%25AA%259A%25E6%2589%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%9C%A8%E4%B8%AD%E5%9B%BD%20%E6%8C%81%E4%B8%8D%E5%90%8C%E6%94%BF%E8%A7%81%E8%80%85%E5%8F%8A%E5%85%B6%E4%BA%B2%E6%9C%8B%E4%B8%8D%E6%96%AD%E5%8F%97%E6%94%BB%E5%87%BB%E5%92%8C%E9%AA%9A%E6%89%B0%20-%20https%3A%2F%2Frfi.my%2FAWTB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%9C%A8%E4%B8%AD%E5%9B%BD%20%E6%8C%81%E4%B8%8D%E5%90%8C%E6%94%BF%E8%A7%81%E8%80%85%E5%8F%8A%E5%85%B6%E4%BA%B2%E6%9C%8B%E4%B8%8D%E6%96%AD%E5%8F%97%E6%94%BB%E5%87%BB%E5%92%8C%E9%AA%9A%E6%89%B0%20-%20https%3A%2F%2Frfi.my%2FAWTB.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWTB.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%9C%A8%E4%B8%AD%E5%9B%BD%20%E6%8C%81%E4%B8%8D%E5%90%8C%E6%94%BF%E8%A7%81%E8%80%85%E5%8F%8A%E5%85%B6%E4%BA%B2%E6%9C%8B%E4%B8%8D%E6%96%AD%E5%8F%97%E6%94%BB%E5%87%BB%E5%92%8C%E9%AA%9A%E6%89%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/f307a8a0-fc2e-11ee-bd36-005056bf30b7/w:1280/p:16x9/%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E8%BF%88%E5%85%8B%E2%80%A7%E7%BA%A6%E7%BF%B0%E9%80%8A%EF%BC%88Mike%20Johnson%EF%BC%89.jpg"><p><strong>美国众议院议长约翰逊4月15日表示，本周将就援助乌克兰、以色列及台湾等法案进行独立投票，以推进多项立法。        </strong></p><div><p>数月以来，美国在欧洲的盟友和乌克兰领导人一直敦促美国国会授权向基辅提供更多援助，并警告说，如果没有美国的额外支持，乌克兰军队可能会在与俄罗斯军队的战斗中失去更多阵地。</p><p>周一晚间，美国国会众议长迈克‧约翰逊（Mike Johnson）在与众议院共和党议员会面时，提出了对四项独立法案进行投票的建议，其中包括为台湾提供资金、对伊朗实施更多制裁，以及允许乌克兰兑现被扣押的俄罗斯资产的法案。</p><p>约翰逊在会后说：“我们在世界各地都有像普京、习近平和伊朗这样的恐怖分子、暴君和可怕的领导人，他们都在关注美国是否会为其盟友和我们自己在全球的利益挺身而出，我们会的。”</p><p>“我们将就对以色列的援助、对乌克兰的援助、对印度-太平洋地区的援助进行投票。然后是另一项包含国家安全优先事项的措施，其中包括……对伊朗的其它制裁以及我们在此讨论已久的其它措施。”“这是一个优先事项，我确实希望本周内能完成这项工作。”</p><p>约翰逊承认说：“乌克兰问题显然是共和党方面争议最大的问题”，“我认为美国人民应该得到解释，为什么在这里提供援助符合美国人的利益。”</p><p>该方案将偏离参议院在今年2月通过的950亿美元援助方案，是否能在美国参众两院获得通过仍未可知。但约翰逊表示，将与众议院民主党领袖哈基姆‧杰弗里斯（Hakeem Jeffries）进行讨论，以争取支持。</p><p>他说：“我们将遵守72小时规则。这可能意味着，如果我们明天（4月16日）早些时候得到法案文本，那就可能是周五晚上（表决）了。”</p><p>这表明，在伊朗对美国在中东最亲密的盟友以色列发动袭击两天后，约翰逊正在采取行动，包括向乌克兰、以色列和台湾提供更多军事援助。</p><p>上周五（4月12日），约翰逊曾经前往海湖庄园（Mar-a-Lago）与前总统特朗普会晤。特朗普随后告诉媒体，他正在“研究”乌克兰援助法案。但直到本周一，特朗普尚未对约翰逊的最新提议发表评论。</p><p>美国众议员玛乔丽‧泰勒‧格林（Marjorie Taylor Greene）直言不讳地反对援助乌克兰，并威胁要把约翰逊赶下议长宝座。周一，约翰逊撇开了格林会因为他的最新提议而将他赶下台的说法。他说：“我不会把时间花在担心撤换动议上。”</p><p>周一晚间，白宫也没有立即对约翰逊的提议做出回应。周一早些时候，美国总统拜登在欢迎捷克总理彼得‧菲亚拉（Petr Fiala）访问华盛顿的讲话中呼吁国会就补充援助法案采取行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWU5.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E6%259C%25AC%25E5%2591%25A8%25E6%2588%2596%25E5%25B0%25B1%25E6%258F%25B4%25E5%258A%25A9%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%258F%258A%25E5%258F%25B0%25E6%25B9%25BE%25E7%25AD%2589%25E6%25B3%2595%25E6%25A1%2588%25E8%25BF%259B%25E8%25A1%258C%25E7%258B%25AC%25E7%25AB%258B%25E6%258A%2595%25E7%25A5%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWU5.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
