--- a/articles/rfi/999968.md
+++ b/articles/rfi/999968.md
@@ -1,5 +1,5 @@
-<!--1713284102000-->
-[继非洲毛驴之后，穿山甲又成为中华传统的牺牲品 - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240416-%E7%BB%A7%E9%9D%9E%E6%B4%B2%E6%AF%9B%E9%A9%B4%E4%B9%8B%E5%90%8E%EF%BC%8C%E7%A9%BF%E5%B1%B1%E7%94%B2%E5%8F%88%E6%88%90%E4%B8%BA%E4%B8%AD%E5%8D%8E%E4%BC%A0%E7%BB%9F%E7%9A%84%E7%89%BA%E7%89%B2%E5%93%81)
+<!--1713291301000-->
+[悉尼教堂持刀砍人案定性恐袭 马克龙称赞两位法国人英勇救人](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD-%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA)
 ------
 
-<div>16/04/2024 - 17:30</div><img src="https://s.rfi.fr/media/display/87b6f128-e5a6-11ec-8321-005056bfb2b6/w:1280/p:16x9/AP19047535489920.jpg"><p><strong>在非洲的毛驴之后，非洲的穿山甲正在成为中国传统营养医学的新的牺牲品。记得今年二月，非洲联盟决定禁止对中国出口毛驴之后，中国有媒体报道说，事实上，中国古代的医学书上明确记载着，阿胶的制作来源是牛皮，而并非是毛驴皮。可惜这么多年来每年因其皮囊而遭到无辜宰杀的数千万头非洲毛驴。                    </strong></p><div><p>同毛驴一样，穿山甲也同样没有任何药用价值，但是，尽管如此，自 2000 年代以来，穿山甲鳞片的使用导致穿山甲贩运的激增，尤其是从非洲被运往中国。在中国，穿山甲的鳞片或血液被用来制作各种药剂，包括一种据说能增强阳刚之气的药剂。而事实上，穿山甲的鳞片同我们人类的指甲一样是由角蛋白制成，它并没有任何特殊的功用。</p><p>而且，为了提高穿山甲的市场价格，人们往往活捉穿山甲，这或许就是新冠疫情初期，穿山甲曾经被认为是病毒从动物传染给人的中间宿主的原因所在。</p><p><strong>非法贩卖非洲穿山甲的路线</strong></p><p>目前世界上已知的穿山甲共有 8 种，其中有 4 种在亚洲，另外4 种在中非。 刚果盆地森林是世界第二大热带森林，由喀麦隆、中非共和国、刚果共和国、刚果民主共和国、加蓬和赤道几内亚六个国家共同拥有，这里是非洲穿山甲的主要栖息地。</p><p>原则上，穿山甲是一种受保护的动物，其贸易自 2017 年起被禁止。然而，非法捕获以及贩卖穿山甲的活动却正在蓬勃发展。据中非地区安全研究所（Institute for Security Studies）中非地区协调员奥卢沃勒-奥杰瓦莱（Oluwole Ojewale）去年发表的一份报告，这种非法贸易带来了数百万美元的收入。倘若不立刻采取措施，穿山甲面临被灭绝的危险。法广法语部记者Amelie Tulet 发自喀麦隆的报道说<strong>：</strong>“这是一个涉及数百万美元的贸易，穿山甲的肉体与鳞片的消费者主要位于亚洲，它们往往在刚果流域的森林中被捕获，由于当捕食者靠近时，穿山甲就会自动卷成团，因此很容易被捕获。之后，村民将其卖给中间商。这些哺乳动物或完整或被宰杀后，经由港口离开非洲大陆，向西途经尼日利亚，向东途经坦桑尼亚和肯尼亚，或乘飞机离开。在喀麦隆，包括《每日新闻》的马蒂亚斯-穆安德-恩加莫在内的几位记者一直在调查这种贩运活动，据他介绍，<em>例如，在机场，一名海关官员告诉我们，贩运者有时会将鳞片碾成粉末，装入牛奶罐中，以便神不知鬼不觉地通过海关 </em>。虽然穿山甲在新冠疫情爆发初期曾经饱受批评，但它在森林生态系统中事实上发挥着重要的调节作用。喀麦隆记者马蒂亚斯-穆恩德-恩加莫介绍说， ‘一只穿山甲每天要消耗大约 20 万只蚂蚁和白蚁，一只穿山甲每年要消耗大约 7000 万只蚂蚁和白蚁。我们可以看到这对刚果盆地森林的影响，对我们种植园的影响则更为重要<em>。 ’</em>到目前为止，刚果流域森林中究竟有多少只穿山甲尚且有待于统计，但是，有一点可以肯定，倘若，不立即采取措施，那么，这种动物将面临被偷猎至灭绝的危险。“</p><p><strong>如何才能有效保护面临灭绝威胁的穿山甲？</strong></p><p>尼日利亚的专家奥卢沃勒-奥杰瓦莱（Oluwole Ojewale）向法广指出，问题在于无论是在非洲当地还是在国际上都缺乏打击这种贩运背后网络的培训和资源，缺乏人力资源，包括护林员，安全执法人员等等，再就是缺乏信息与法规。因为在绝大多数国家，民众并不知道有关保护或禁止穿山甲贸易的法律"。</p><p>确实，要避免穿山甲的物种消失，一方面必须禁止并且切实地阻止非法狩猎，严厉禁止非法贸易。另一方面，还必须从消费者这端着手，因为消费这种受到保护的动物本身也是一种犯法的行为，而且这种消费并没有任何价值。</p><p><a href="http://www.cbcgdf.org/NewsShow/4936/24388.html#:~:text=1.穿山甲的外貌和生活习性&text=它们的四肢粗壮，爪子,和味觉来寻找食物。" target="_blank">中国生物多样性保护与绿色基金会的网站</a>上就明确规定，2020年起，中国将穿山甲由国家二级保护野生动物提升至一级，2020年版的《中国药典》也将穿山甲进行了移除，因为今天大家都明白，野生动物不应该被用来做药材。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
+<div>16/04/2024 - 17:44</div><img src="https://s.rfi.fr/media/display/1b5bd2be-fbe8-11ee-90d7-005056a90284/w:1280/p:16x9/2024-04-14T072041Z_689654122_RC2367AHS8HL_RTRMADP_3_AUSTRALIA-CRIME.JPG"><p><strong>澳大利亚警方今天表示，悉尼一座教会昨天在直播礼拜期间发生的持刀攻击案，是一起涉及宗教动机的极端主义恐怖行为。警方并呼吁当地社区民众控制怒火、保持冷静。法国总统马克龙今天赞扬两名法国人在抵御砍人案中的英雄行为。        </strong></p><div><p>据路透社今天报道称，悉尼西部郊区一座亚述基督教教堂昨天傍晚发生袭击事件，造成一名著名的主教受伤，所幸没有危及性命。</p><p>新南威尔斯州（New South Wales）警察局长韦柏（Karen Webb）在记者会上说：「将所有资料纳入考量后，我宣布这是一起恐怖事件。」她表示，这起攻击被视为是有宗教动机的「极端主义」行为，恐吓民众，包括教堂内的教区居民与观看线上直播的信徒。</p><p>韦柏表示，这名犯嫌「为警方所知」，但并没有被列在任何恐怖分子观察名单上。韦柏说，赶赴现场因应的警方很快就遭教会外的愤怒群众攻击，「民众利用现场可取用的物品攻击警察，包括拿砖头、混凝土与栅栏丢向警察、警察装置与警车」。</p><p>韦柏说一整个晚上都有受伤警察送医治疗。她虽没有提供受伤人数，但说这群民众损坏了20辆警车。</p><p>韦柏说：「这无法令人接受，涉及那场骚乱的人可以料想日后会有人来敲门，可能不是今天、也可能不会是明天，但我们会找到你，将你逮捕到案。」</p><p>该消息没有进一步民众对警方发怒的原因与细节。</p><p>据法新社消息，周二，法国总统马克龙赞扬了两名法国人的英勇行为，称他们是“真正的英雄”，他们在周六澳大利亚悉尼一家购物中心发生的另一次持刀袭击事件时进行了抵御，该事件导致六人死亡。</p><p>法国总统在 X 上写道：“我们的两位同胞表现得像真正的英雄，他因此非常自豪，对两人表达感激。”他还向“遭受袭击的澳大利亚人”表示“哀悼”。</p><p>法国大使表示，塞拉斯·德普雷奥和达米安·盖罗“在试图制服袭击者时表现出了极大的勇气”。</p><p>澳大利亚总理阿尔巴尼斯周二宣布，法国两人中的一位达米安·盖罗特(Damien Guerot)将获得澳大利亚公民身份，他在自动扶梯上用一根棍子英勇地击退了凶嫌。</p><p>事件中，五名妇女和一名巴基斯坦人保安丧生，该袭击并未归咎于恐怖主义。 警方正在调查袭击者是一名 40 岁的精神病男子，他是否专门针对女性行凶。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWRj.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E6%2582%2589%25E5%25B0%25BC%25E6%2595%2599%25E5%25A0%2582%25E6%258C%2581%25E5%2588%2580%25E7%25A0%258D%25E4%25BA%25BA%25E6%25A1%2588%25E5%25AE%259A%25E6%2580%25A7%25E6%2581%2590%25E8%25A2%25AD-%25E9%25A9%25AC%25E5%2585%258B%25E9%25BE%2599%25E7%25A7%25B0%25E8%25B5%259E%25E4%25B8%25A4%25E4%25BD%258D%25E6%25B3%2595%25E5%259B%25BD%25E4%25BA%25BA%25E8%258B%25B1%25E5%258B%2587%25E6%2595%2591%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWRj.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWRj.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWRj.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%82%89%E5%B0%BC%E6%95%99%E5%A0%82%E6%8C%81%E5%88%80%E7%A0%8D%E4%BA%BA%E6%A1%88%E5%AE%9A%E6%80%A7%E6%81%90%E8%A2%AD%20%E9%A9%AC%E5%85%8B%E9%BE%99%E7%A7%B0%E8%B5%9E%E4%B8%A4%E4%BD%8D%E6%B3%95%E5%9B%BD%E4%BA%BA%E8%8B%B1%E5%8B%87%E6%95%91%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
