--- a/articles/rfi/999971.md
+++ b/articles/rfi/999971.md
@@ -1,5 +1,5 @@
-<!--1713280501000-->
-[美国指控中国补贴芬太尼生产](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7)
+<!--1713282301000-->
+[拜登夫妇公布报税资料如下](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B)
 ------
 
-<div>16/04/2024 - 16:53</div><img src="https://s.rfi.fr/media/display/e78934b4-131f-11ea-886c-005056a99247/w:1280/p:16x9/063_609942630.jpg"><p><strong>周二，一个由美国民选官员组成的委员会指责中国当局间接参与芬太尼的生产，芬太尼是一种强效鸦片制剂，每年导致美国数万人死亡。        </strong></p><div><p>据法新社今天报道称，根据美国众议院民选官员设立的负责中国共产党政策的特别委员会发表的一份报告，中国政府补贴生产芬太尼前体的实验室的活动，芬太尼前体是制造芬太尼所必需的原料。</p><p>该委员会当选成员的一名助理在电话新闻发布会上表示，“这些补贴采取增值税减免的形式。我们观察到，接受补贴的公司销售的药品平均多出十倍。”</p><p>该报告称，大多数涉案公司都是合法注册的，在美国和欧洲拥有众多其他产品的客户。 因此，芬太尼前体的生产和出口不一定是它们的主要活动。</p><p>为了减少中国的芬太尼威胁，该委员会建议设立一个专门机构，具有制裁能力，不仅可以针对这些实验室，还可以针对数字平台以及为它们提供融资的银行，以截断生产芬太尼各个环节的盈利。</p><p>但报告警告，这种方法只有在全球层面加强合作才能取得成果，才能提高有效性。</p><p>芬太尼是一种用于医疗领域的强效合成鸦片制剂，但芬太尼可能被滥用为药物，据美国当局称，芬太尼每年导致美国超过 70,000 人因服药过量死亡，其中主要是 18 至 49 岁的年龄段。 </p><p>美国财政部长耶伦本月早些时候访华期间提出了这个话题，其中包括开始讨论加强反洗钱合作。</p><p>该合作的具体目标是切断毒贩的资金来源，从而减少鸦片制剂流向美国。</p><p>法新社说，如果说迄今为止芬太尼主要来自中国，那么现在市场主要由墨西哥贩毒集团主导。</p><p>中国实验室涉嫌向毒贩（尤其是墨西哥毒贩）提供用于制造芬太尼的物质。</p><p>美国指责中国在打击这些芬太尼成分的非法生产和出口方面做得不够。消息称，中国对国内芬太尼威胁称零容忍，但是对出口芬太尼管制相对宽松。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E6%258C%2587%25E6%258E%25A7%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A1%25A5%25E8%25B4%25B4%25E8%258A%25AC%25E5%25A4%25AA%25E5%25B0%25BC%25E7%2594%259F%25E4%25BA%25A7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWQw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7%20-%20https%3A%2F%2Frfi.my%2FAWQw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E6%8C%87%E6%8E%A7%E4%B8%AD%E5%9B%BD%E8%A1%A5%E8%B4%B4%E8%8A%AC%E5%A4%AA%E5%B0%BC%E7%94%9F%E4%BA%A7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 17:26</div><img src="https://s.rfi.fr/media/display/de4dac9c-fa86-11ee-8398-005056bfb2b6/w:1280/p:16x9/AP24103786777136.jpg"><p><strong>根据美国总统拜登及第一夫人吉尔2023年报税资料，美国第一夫妇收入为61万9976美元，其中大部分来自总统的40万美元薪水，以及吉尔在附近维吉尼亚州一所大学任教的8万5985美元的薪水。        </strong></p><div><p>拜登夫妇公布报税资料即申报表，象征性延续了前任总统特朗普时期暂时中断、但展现白宫透明度的传统。</p><p>据法新社说，这个一年一度的不成文传统目的在于建立外界对白宫的信任，其他政治人物和候选人也经常这么做。</p><p>拜登夫妇2023年收入为61万9976美元。2022年拜登夫妇申报57万9514美元收入，2021年拜登申报61万702美元收入。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWRP.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%258B%259C%25E7%2599%25BB%25E5%25A4%25AB%25E5%25A6%2587%25E5%2585%25AC%25E5%25B8%2583%25E6%258A%25A5%25E7%25A8%258E%25E8%25B5%2584%25E6%2596%2599%25E5%25A6%2582%25E4%25B8%258B&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B%20-%20https%3A%2F%2Frfi.my%2FAWRP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B%20-%20https%3A%2F%2Frfi.my%2FAWRP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWRP.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E5%A4%AB%E5%A6%87%E5%85%AC%E5%B8%83%E6%8A%A5%E7%A8%8E%E8%B5%84%E6%96%99%E5%A6%82%E4%B8%8B&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
