--- a/articles/rfi/999977.md
+++ b/articles/rfi/999977.md
@@ -1,5 +1,5 @@
-<!--1713273301000-->
-[美媒：拜登报复伊朗的选择可能会激怒中国](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%AA%92-%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD)
+<!--1713278702000-->
+[路透社说俄罗斯和中国以废品贸易新铜 以规避纳税和制裁](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C-%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81)
 ------
 
-<div>16/04/2024 - 15:02</div><img src="https://s.rfi.fr/media/display/20aa3036-f8db-11ee-8af8-005056bf30b7/w:1280/p:16x9/POLLUTION%20AIR.jpg"><p><strong>美国总统拜登的助手正准备因德黑兰袭击以色列而对伊朗实施经济制裁，但专家表示，在不激怒中国或冒油价飙升风险的情况下，他们面临的有意义的选择有限。        </strong></p><div><p>据华盛顿邮报今天报道称，为了报复对伊朗领事馆的袭击，伊朗周末向以色列发射了 300 多架无人机和导弹。但史无前例的空中拦截并未造成重大损失或人员伤亡，美国领导的部队拦截了大部分炮弹。</p><p>尽管如此，随着西方主要官员周一齐聚华盛顿参加国际货币基金组织和世界银行春季会议，美国官员及其欧洲盟友正在讨论对伊朗采取的潜在经济对策。他们的选择很有限，因为伊朗已经是世界上受制裁最严重的国家之一，美国对伊朗银行、制造业和能源部门都实施了惩罚。</p><p>剩下的最明显的选择之一是积极扩大对购买大量伊朗原油出口的中国公司的制裁，这些公司为德黑兰提供了金融生命线，因为伊朗仍然与西方隔绝。去年，美国对中国和伊朗之间石油贸易中的一些商业联系实施了制裁，但专家表示，美国政府可能会采取进一步措施，对更多的中国炼油厂和银行实施限制。</p><p>然而，这样做也有其自身的风险。近几个月来，财政部长耶伦和其他政府官员一直在努力稳定与中国的关系，能源生产的突然打击可能会激怒北京。此外，在供应紧张的情况下，切断伊朗原油的销售可能会导致全球油价飙升，并可能导致 2024 年总统大选前的天然气价格上涨。</p><p>外交政策智库新美国安全中心兼职高级研究员雷切尔·齐姆巴表示：“能够改变游戏规则的选择并不多，因为伊朗大部分地区已经受到制裁。” “但如果你真的想切断伊朗的石油收入，你必须瞄准中国和中国机构。”</p><p>制裁为购买伊朗石油提供便利的中国银行可能会导致全球市场每天减少多达 150 万桶石油。咨询公司拉皮丹能源集团总裁鲍勃·麦克纳利表示，这将使石油价格突破每桶 100 美元，这对拜登政府来说将是一场政治噩梦。“拜登最不想要的就是天然气价格上涨，所以他希望伊朗向中国出售石油。他不希望石油被关闭。就这么简单；他无力制裁伊朗石油，”麦克纳利说。 “他们可以做一些象征性的事情，去追捕这里或那里的小商人，但很可能就是这样。”</p><p>据该报道称，拜登在伊朗袭击后敦促保持冷静。美国已明确表示不会参与以色列对伊朗的任何军事袭击，美国高级官员强调，他们的目标是“缓和地区紧张局势”，防止更广泛的冲突。</p><p>以色列战时内阁周一召开会议，商讨可能的应对措施。</p><p>虽然西方排除了参与军事反应的可能性，但对伊朗行动的经济制裁似乎越来越确定。欧盟委员会主席冯德莱恩表示，布鲁塞尔官员将讨论对伊朗实施更严厉的制裁。她在一份声明中表示：“我们将与我们的合作伙伴密切合作，考虑对伊朗实施进一步的制裁。”</p><p>例如，据两位不愿透露姓名的知情人士透露，美国官员已经讨论了收紧伊朗获得用于人道主义救援的冻结资金的问题。他们还讨论了对伊朗官员和企业实施额外制裁。第一个可能在很大程度上具有象征意义：伊朗已经很难获得这些资金。目前还不清楚对其他公司（例如伊朗无人机零部件国际供应商）的制裁将产生多大影响。</p><p>拜登政府还面临国会山采取行动的压力。众议院周一以压倒性多数通过了旨在打击伊朗向中国出售石油的立法。议会批评者认为，拜登应该进一步确保德黑兰无法从石油出口中获得数十亿美元。</p><p>不过，其他专家表示，挑战在于华盛顿对德黑兰的态度已经过于激进。自特朗普政府放弃总统奥巴马达成的核协议以来，伊朗一直受到严格的经济限制，这使得政策制定者在面对新的紧急情况时几乎没有操作的空间。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWP7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%25AA%2592-%25E6%258B%259C%25E7%2599%25BB%25E6%258A%25A5%25E5%25A4%258D%25E4%25BC%258A%25E6%259C%2597%25E7%259A%2584%25E9%2580%2589%25E6%258B%25A9%25E5%258F%25AF%25E8%2583%25BD%25E4%25BC%259A%25E6%25BF%2580%25E6%2580%2592%25E4%25B8%25AD%25E5%259B%25BD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWP7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWP7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWP7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E6%8B%9C%E7%99%BB%E6%8A%A5%E5%A4%8D%E4%BC%8A%E6%9C%97%E7%9A%84%E9%80%89%E6%8B%A9%E5%8F%AF%E8%83%BD%E4%BC%9A%E6%BF%80%E6%80%92%E4%B8%AD%E5%9B%BD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 16:04</div><img src="https://s.rfi.fr/media/display/fd84f934-ecf9-11ee-ac05-005056bf30b7/w:1280/p:16x9/2024-03-26T124904Z_2010325684_RC2NT6ALJYU7_RTRMADP_3_RUSSIA-SHOOTING-SECURITY.JPG"><p><strong>三名知情人士告诉路透社，俄罗斯铜生产商 RCC 和中国企业通过以废品贸易的方式避税并规避西方制裁的影响。消息人士称，铜盘条在中国偏远的新疆维吾尔地区被中介机构粉碎，使其难以与废钢区分开来，这使得出口商和进口商都可以从废金属和新金属的关税差异中获利。        </strong></p><div><p>路透社称独家报道：俄罗斯和中国以废品贸易新铜以规避税收和制裁。</p><p>俄罗斯12月份铜杆出口关税为7%，低于废钢10%的关税。进口到中国的铜杆税率为4%，但进口俄罗斯废铜则没有关税。</p><p>在西方制裁下，不存在任何法律障碍阻止中国从俄罗斯公司购买金属。但制造商担心，如果制造商与俄罗斯公司开展业务，他们就会失去客户，包括美国和英国的客户，的出口业务。</p><p>消息人士称，一些中国企业已成立新团队来处理涉俄业务。</p><p>美国的制裁旨在最大限度地减少俄罗斯的出口收入，这也可能意味着处理美元付款的困难，因为国际贸易通常以美元进行。</p><p>中国和俄罗斯数据之间的差异反映了去年 12 月开始的伪装成废金属的新金属销售。对废铜和铜棒的制裁没有区别。</p><p>中国海关数据显示，自去年12月以来，中国从俄罗斯购买的废铜数量显着增加，而路透社从商业数据提供商获得的俄罗斯数据显示，出口到该国最大贸易伙伴的废铜数量可以忽略不计。</p><p>该报道称，在回应路透社关于这一差异的询问时，俄罗斯海关表示：“联邦海关总署暂时不提供外贸数据。”它于 2022 年 4 月俄罗斯入侵乌克兰后不久停止发布贸易数据。从那时起，市场就依赖于商业提供商。</p><p>当被问及与中国公司的铜棒贸易时，受到西方制裁的RCC（即俄罗斯铜业公司）表示，它只向俄罗斯公司供应产品。它没有进一步发表评论。</p><p>中国与俄罗斯接壤的新疆海关没有回复电子邮件询问和电话。</p><p>自2022年2月美国因俄罗斯入侵乌克兰而对其实施制裁后，中国已成为俄罗斯企业寻求出口商品的主要目的地。</p><p>美国和欧盟也因支持俄罗斯在乌克兰的战争而对中国企业实施制裁。</p><p>粉碎新制造的铜线材是伪装看起来与废料非常不同的新材料的有效方法。</p><p>这种新型高纯度铜长而细的棒主要用于制造电力电缆，通常呈盘绕状以便于运输。</p><p>相比之下，废铜是已使用过的电线、管材和管道的混合物。它们被切成谷物大小的碎片，或者像面条包一样卷起来压紧，以便运输。</p><p>消息人士称，由于国际社会谴责镇压维吾尔人，中国限制进入新疆地区，因此粉碎事件没有引起人们的注意。</p><p>除了避税的经济动机外，碎金属更难以识别和追踪，从而更容易出售给中国制造商。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQA.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E8%25B7%25AF%25E9%2580%258F%25E7%25A4%25BE%25E8%25AF%25B4%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E5%2592%258C%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BB%25A5%25E5%25BA%259F%25E5%2593%2581%25E8%25B4%25B8%25E6%2598%2593%25E6%2596%25B0%25E9%2593%259C-%25E4%25BB%25A5%25E8%25A7%2584%25E9%2581%25BF%25E7%25BA%25B3%25E7%25A8%258E%25E5%2592%258C%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C%20%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWQA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C%20%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWQA.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQA.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B7%AF%E9%80%8F%E7%A4%BE%E8%AF%B4%E4%BF%84%E7%BD%97%E6%96%AF%E5%92%8C%E4%B8%AD%E5%9B%BD%E4%BB%A5%E5%BA%9F%E5%93%81%E8%B4%B8%E6%98%93%E6%96%B0%E9%93%9C%20%E4%BB%A5%E8%A7%84%E9%81%BF%E7%BA%B3%E7%A8%8E%E5%92%8C%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
