--- a/articles/rfi/999978.md
+++ b/articles/rfi/999978.md
@@ -1,5 +1,5 @@
-<!--1713273301000-->
-[菲律宾总统欢迎日本自卫队从明年起参加美菲“肩并肩”等联合军演](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2-%E8%82%A9%E5%B9%B6%E8%82%A9-%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94)
+<!--1713275107000-->
+[哥本哈根证券交易所失火 楼顶尖塔烧塌](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240416-%E5%93%A5%E6%9C%AC%E5%93%88%E6%A0%B9%E8%AF%81%E5%88%B8%E4%BA%A4%E6%98%93%E6%89%80%E5%A4%B1%E7%81%AB-%E6%A5%BC%E9%A1%B6%E5%B0%96%E5%A1%94%E7%83%A7%E5%A1%8C)
 ------
 
-<div>16/04/2024 - 15:00</div><img src="https://s.rfi.fr/media/display/9bebb08e-b471-11ee-94ac-005056bf30b7/w:1280/p:16x9/AP24015603830995.jpg"><p><strong>菲律宾总统马科斯4月15日欢迎日本自卫队从明年起正式参加美菲两军实施的“肩并肩”等联合演习，：“我认为日本参加是很好的行动”。        </strong></p><div><p>共同社报道，提到中国，马科斯谴责称，最近菲律宾在南海“遭受了非法的、攻击性的不负责任行为”。他表示对日本自卫队正式参加美菲联合演习“没有异议”，强调日美菲朝着“维护和平稳定与航行自由，彻底遵守国际法”的目标，“能够最大限度地运用所拥有的力量”。</p><p>马科斯11日出席了在美国华盛顿召开的日美菲三国首脑会谈，就设立人道主义援助和应对灾害的三国演习达成共识，发布声明，明年三国演习将加入美菲“肩并肩”等联合演习中。</p><p>在记者会上，马科斯就方便日本自卫队参加联合演习的日菲间的《互惠准入协定》（RAA）透露说，谈判没有争议点，预计很快就能签署。</p><p>“肩并肩”是美菲两军每年举行的最大规模演习。今年将于4月22日至5月10日实施，预计约1.7万名官兵参加。马科斯指出：“计划首次举行网络安全保障与指挥统制训练，将是最复杂、规模最大的演习。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWP1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E8%258F%25B2%25E5%25BE%258B%25E5%25AE%25BE%25E6%2580%25BB%25E7%25BB%259F%25E6%25AC%25A2%25E8%25BF%258E%25E6%2597%25A5%25E6%259C%25AC%25E8%2587%25AA%25E5%258D%25AB%25E9%2598%259F%25E4%25BB%258E%25E6%2598%258E%25E5%25B9%25B4%25E8%25B5%25B7%25E5%258F%2582%25E5%258A%25A0%25E7%25BE%258E%25E8%258F%25B2-%25E8%2582%25A9%25E5%25B9%25B6%25E8%2582%25A9-%25E7%25AD%2589%25E8%2581%2594%25E5%2590%2588%25E5%2586%259B%25E6%25BC%2594&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94%20-%20https%3A%2F%2Frfi.my%2FAWP1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94%20-%20https%3A%2F%2Frfi.my%2FAWP1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWP1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 15:33</div><img src="https://s.rfi.fr/media/display/9f732b30-fbf0-11ee-9d00-005056a90284/w:1280/p:16x9/AP24107274676990.jpg"><p><strong>丹麦首都最著名的建筑之一哥本哈根旧证券交易所发生火灾，火焰吞噬了大楼尖塔并倒塌，这一场景让人想起 2019 年巴黎圣母院火灾。        </strong></p><div><p>哥本哈根火灾让历史悠久的证券交易所被火焰吞没。</p><p>人们看到紧急消防部门、丹麦商会的员工，包括其首席执行官布莱恩·米克尔森(Brian Mikkelsen)，甚至路人都在竞相抢救楼里的大型画作，与火竟时拯救历史文物。</p><p>哥本哈根消防局局长雅各布·维德斯特德·安德森告诉记者：“我们正在尽一切努力拯救一切。”</p><p>丹麦国家博物馆今日表示，已派出 25 名员工前往现场，帮助疏散文物和绘画。这座历史悠久的建筑的尖顶呈四龙交织的尾巴形状，火灾发生时正在进行翻修，并用脚手架覆盖。</p><p>维德斯特德告诉记者，部分屋顶已经倒塌，火势蔓延到大楼顶楼。Vedsted 表示，约有 120 人正在努力控制火势，但只有约 40% 的火势得到控制，灭火行动将持续至少 24 小时。</p><p>警方表示，目前还没有人员受伤的报告。</p><p>丹麦国防部长特罗尔斯·隆德·波尔森 (Troels Lund Poulsen) 在 X 上写道：“来自交易所的可怕照片。太悲伤了。这座标志性建筑对我们所有人来说意义重大……我们自己的巴黎圣母院时刻。”</p><p>浓浓的灰色烟雾在城市上空升起，紧急服务人员赶到现场时可以听到警报声。军方表示，大约 90 名皇家救生卫队应征入伍的士兵正在帮助封锁并保护贵重物品。</p><p>80 岁的教师伊丽莎白·汉德伯格 (Elisabeth Handberg) 说：“我非常非常难过……起初我不敢相信这是真的。”她说，她和她的学生们从教室窗户看到了烟雾。“我的五年级学生说，‘从克里斯蒂安四世国王时代起，建筑就一直在那里。他们也对此非常难过，”她说， “我希望它能被重建，没有其他办法了。”</p><p>这座荷兰文艺复兴风格的建筑不再是丹麦证券交易所的所在地，而是丹麦商会的总部。该建筑最初是为了容纳交易茶叶和香料等商品的摊位而建造的。</p><p>楼顶有全金雕龙。丹麦国家博物馆高级研究员乌拉·克亚尔 (Ulla Kjaer) 告诉路透社，“人们认为丹麦会产出大量黄金，这就是为什么他们在上面放龙，因为龙以守护黄金而闻名。”</p><p>她说，尖塔的顶部还有三个王冠，象征着丹麦、挪威和瑞典这三个伟大的王国。克亚尔还说，“这个尖塔绝对是标志性的，世界上没有其他尖塔可以与之媲美。”商会在其网站上表示，屋顶上的龙被视为象征性地保护交易免受敌人和火灾的侵害。</p><p>弗雷德里克国王在 Instagram 上的一篇帖子中写道：“我们建筑遗产的一个重要部分曾经并且仍然在燃烧。” “世世代代以来，独特的龙形尖塔使哥本哈根成为‘塔楼之城’。”</p><p>建筑物周围的脚手架使紧急服务人员更难够得着火焰，而铜屋顶则阻挡了热量。</p><p>警方称，附近的财政部因火灾而被疏散。</p><p>目前尚不清楚起火原因。</p><p>据路透社说，丹麦商会自 1857 年起就拥有该建筑，并致力于将其恢复为丹麦国王克里斯蒂安四世 (Christian IV) 于 17 世纪建造的风格。</p><p>文化部长雅各布·恩格尔·施密特 (Jakob Engel-Schmidt) 在 X 上写道：“400 年的丹麦文化遗产在火焰中燃烧。”他对记者说：“这座建筑充满了艺术，讲述了很多关于我们的历史，关于我们作为一个民族的身份。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWPf.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240416-%25E5%2593%25A5%25E6%259C%25AC%25E5%2593%2588%25E6%25A0%25B9%25E8%25AF%2581%25E5%2588%25B8%25E4%25BA%25A4%25E6%2598%2593%25E6%2589%2580%25E5%25A4%25B1%25E7%2581%25AB-%25E6%25A5%25BC%25E9%25A1%25B6%25E5%25B0%2596%25E5%25A1%2594%25E7%2583%25A7%25E5%25A1%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%93%A5%E6%9C%AC%E5%93%88%E6%A0%B9%E8%AF%81%E5%88%B8%E4%BA%A4%E6%98%93%E6%89%80%E5%A4%B1%E7%81%AB%20%E6%A5%BC%E9%A1%B6%E5%B0%96%E5%A1%94%E7%83%A7%E5%A1%8C%20-%20https%3A%2F%2Frfi.my%2FAWPf.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%93%A5%E6%9C%AC%E5%93%88%E6%A0%B9%E8%AF%81%E5%88%B8%E4%BA%A4%E6%98%93%E6%89%80%E5%A4%B1%E7%81%AB%20%E6%A5%BC%E9%A1%B6%E5%B0%96%E5%A1%94%E7%83%A7%E5%A1%8C%20-%20https%3A%2F%2Frfi.my%2FAWPf.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWPf.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%93%A5%E6%9C%AC%E5%93%88%E6%A0%B9%E8%AF%81%E5%88%B8%E4%BA%A4%E6%98%93%E6%89%80%E5%A4%B1%E7%81%AB%20%E6%A5%BC%E9%A1%B6%E5%B0%96%E5%A1%94%E7%83%A7%E5%A1%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
