--- a/articles/rfi/999989.md
+++ b/articles/rfi/999989.md
@@ -1,5 +1,5 @@
 <!--1713262501000-->
-[美国众议院议长推动就援助以色列、乌克兰和台湾问题进行投票](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E6%8E%A8%E5%8A%A8%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%BB%A5%E8%89%B2%E5%88%97-%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%8F%B0%E6%B9%BE%E9%97%AE%E9%A2%98%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8)
+[时代中国传爆雷](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E6%97%B6%E4%BB%A3%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%88%86%E9%9B%B7)
 ------
 
-<div>16/04/2024 - 11:14</div><img src="https://s.rfi.fr/media/display/bc7a9f9c-d008-11ee-b8e2-005056a90284/w:1280/p:16x9/congress-3.jpg"><p><strong>美国众议院议长迈克·约翰逊本周正在推动对以色列、乌克兰和台湾的援助采取行动，根据他于周一公布的一项详尽的计划，国会或将该计划分成单独的投票，以弥合众议院在外交政策上的政治分歧。        </strong></p><div><p>据美联社今天报道称，面对强烈反对援助乌克兰的保守派的反抗，属于共和党的议长在对外援助计划上的举动可能是一个分水岭，这是该法案在拖延两个多月后首次采取重大行动。但约翰逊打算对该计划的部分内容进行四次单独投票，这也使得该计划可能会较参议院 2 月份通过的 950 亿美元援助计划进行重大修改。</p><p>目前尚不清楚众议院最终是否会提出与参议院法案类似的一揽子计划，或者有什么显着不同，这可能会使长达数月的艰苦努力让国会批准对乌克兰的军事资助变得更加复杂。</p><p>但与此同时，世界各地的冲突不断升级。以色列军事首长周一表示，以色列将对伊朗周末的导弹袭击做出回应。乌克兰军方首脑周末警告说，由于天气变暖，俄罗斯军队可以发动新的攻势，乌克兰东部的战场局势“近几天显着恶化”。</p><p>乌克兰外交部长表示，以色列对伊朗空袭的破解反应表明了基辅的需要。</p><p>据约翰逊说，“全球各地正在发生一些突发事件，我们都在非常仔细地关注，我们知道全世界都在关注我们，看看我们如何反应。”</p><p>总统拜登在白宫接待了捷克总理菲亚拉，拜登呼吁众议院立即审议参议院的拨款计划。拜登说， “他们现在必须这样做。”</p><p>据一位不愿透露姓名的知情人士透露，约翰逊和拜登周一发表了讲话。</p><p>众议院的民主党人可能愿意帮助约翰逊通过部分援助，甚至可能同意共和党人正在讨论的一些额外措施，例如以贷款形式提供部分乌克兰经济援助。</p><p>但如果约翰逊过于偏向共和党的优先事项，他就会失去他所需要的民主党支持。对该计划的任何修改也有可能在参议院遭受挫折，参议院中大部分共和党人反对向乌克兰提供援助，而民主党人对以色列在加沙的行动越来越感到震惊。</p><p>当众议院议员周一晚上返回国会时，约翰逊与共和党议员们聚集在一起，制定了他的策略，以争取众议院批准该拨款计划。他表示，他将推动该方案在单一辩论规则下提交众议院，该规则允许就乌克兰、以色列、台湾援助和其他外交政策提案进行单独投票。</p><p>约翰逊表示，这些提议将以贷款的形式为基辅提供部分资金，允许美国扣押冻结的俄罗斯央行资产，并对伊朗实施其他制裁。</p><p>共和党会议上议员们在处理与俄罗斯冲突的问题上意见不一：共和党国防鹰派，包括国家安全委员会的高级议员，与民粹主义保守派展开对立，后者强烈反对继续支持基辅的斗争。</p><p>尽管如此，约翰逊对乌克兰援助的支持可能会进一步激怒民粹主义保守派，他们已经对他作为议长的指示感到愤怒。</p><p>同时，民主党人向约翰逊施压，要求他接受参议院通过的法案，该法案将为美国盟友提供总额950 亿美元的资金，并为加沙和乌克兰的平民提供人道主义支持。</p><p>参议院多数党领袖查克·舒默表示：“众议院必须尽快向以色列提供援助，而做到这一点的唯一方法是尽快通过参议院的补充协议。”</p><p>据美联社说，参议院共和党领袖米奇·麦康奈尔周一下午敦促众议院审议参议院的法案。他在一次发言中表示，“如果不表现出决心并认真投资美国的实力，我们就不能指望阻止冲突。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWLu.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E8%25AE%25AE%25E9%2595%25BF%25E6%258E%25A8%25E5%258A%25A8%25E5%25B0%25B1%25E6%258F%25B4%25E5%258A%25A9%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E5%2592%258C%25E5%258F%25B0%25E6%25B9%25BE%25E9%2597%25AE%25E9%25A2%2598%25E8%25BF%259B%25E8%25A1%258C%25E6%258A%2595%25E7%25A5%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E6%8E%A8%E5%8A%A8%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%BB%A5%E8%89%B2%E5%88%97%E3%80%81%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%8F%B0%E6%B9%BE%E9%97%AE%E9%A2%98%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20-%20https%3A%2F%2Frfi.my%2FAWLu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E6%8E%A8%E5%8A%A8%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%BB%A5%E8%89%B2%E5%88%97%E3%80%81%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%8F%B0%E6%B9%BE%E9%97%AE%E9%A2%98%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20-%20https%3A%2F%2Frfi.my%2FAWLu.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWLu.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E6%8E%A8%E5%8A%A8%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%BB%A5%E8%89%B2%E5%88%97%E3%80%81%E4%B9%8C%E5%85%8B%E5%85%B0%E5%92%8C%E5%8F%B0%E6%B9%BE%E9%97%AE%E9%A2%98%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 12:06</div><img src="https://s.rfi.fr/media/display/9594098e-e9fa-11ee-b80e-005056a90284/w:1280/p:16x9/AP22004508693199.jpg"><p><strong>再有中国房企被申请清算。综合港媒报导，时代中国表示，香港恒生银行昨天向香港高等法院提交一份针对该公司的清算呈请，涉及金额约1.73亿美元。        </strong></p><div><p>据中央社称综合香港经济日报及星岛日报今天消息，时代中国公布，香港恒生银行有限公司15日向香港高等法院提交一份针对该公司的清算呈请，内容指涉及金额分别约为1.73亿美元及7.31亿港元的公司财务责任。</p><p>香港高等法院已将首次聆讯日期定为7月3日。时代中国今天在港股股价一度重挫近5成低见0.121元，半日跌40.8%。</p><p>时代中国表示，董事会认为呈请并不代表公司其他持份者的利益，且可能损害公司的价值，将寻求法律手段坚决反对呈请，并采取一切必要行动以维护其合法权利。</p><p>据该报道，中国恒大集团已于今年1月被香港高等法院颁布清算令。陆媒先前报导，恒大市值仅剩22亿港元。之后中国多家房企陷入被清算危机，包括另一龙头房企碧桂园，今年2月被债权人在香港申请清算。今年4月中国世茂集团被属于国有的中国建设银行（亚洲）提出清算呈请。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWMq.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E6%2597%25B6%25E4%25BB%25A3%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BC%25A0%25E7%2588%2586%25E9%259B%25B7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%B6%E4%BB%A3%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%88%86%E9%9B%B7%20-%20https%3A%2F%2Frfi.my%2FAWMq.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%B6%E4%BB%A3%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%88%86%E9%9B%B7%20-%20https%3A%2F%2Frfi.my%2FAWMq.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWMq.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%B6%E4%BB%A3%E4%B8%AD%E5%9B%BD%E4%BC%A0%E7%88%86%E9%9B%B7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
