--- a/articles/rfi/999997.md
+++ b/articles/rfi/999997.md
@@ -1,5 +1,5 @@
-<!--1713258908000-->
-[英国报告指香港23条立法可能不符国际人权 经贸已现负面势头 中方提交涉](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E8%8B%B1%E5%9B%BD%E6%8A%A5%E5%91%8A%E6%8C%87%E9%A6%99%E6%B8%AF23%E6%9D%A1%E7%AB%8B%E6%B3%95%E5%8F%AF%E8%83%BD%E4%B8%8D%E7%AC%A6%E5%9B%BD%E9%99%85%E4%BA%BA%E6%9D%83-%E7%BB%8F%E8%B4%B8%E5%B7%B2%E7%8E%B0%E8%B4%9F%E9%9D%A2%E5%8A%BF%E5%A4%B4-%E4%B8%AD%E6%96%B9%E6%8F%90%E4%BA%A4%E6%B6%89)
+<!--1713260702000-->
+[人权组织报告发现中国继续非法迫害异见人士家属](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%BA%BA%E6%9D%83%E7%BB%84%E7%BB%87%E6%8A%A5%E5%91%8A%E5%8F%91%E7%8E%B0%E4%B8%AD%E5%9B%BD%E7%BB%A7%E7%BB%AD%E9%9D%9E%E6%B3%95%E8%BF%AB%E5%AE%B3%E5%BC%82%E8%A7%81%E4%BA%BA%E5%A3%AB%E5%AE%B6%E5%B1%9E)
 ------
 
-<div>16/04/2024 - 09:34</div><img src="https://s.rfi.fr/media/display/69e1aba4-fbc3-11ee-bb47-005056a90284/w:1280/p:16x9/hk-201.png"><p><strong>英国外相卡梅伦在最新发表的《香港半年报告》中指出，北京为香港制订的第一条国安法违背《中英联合声明》，且令香港的反对派几乎被铲除；而第二条匆匆通过的国安条例，很可能与国际人权法不相容，势将对港人享用人权和自由产生负面影响，亦经贸方面出现负面势头。但他没有敦促港府废除该法，只是再次要求港府尊重《基本法》赋予港人的权利和自由，捍卫高度自治。        </strong></p><div><p>香港政府丶中国外文部驻港公署及中国驻英大使馆对报告分别发文谴责和表达强烈不满，指报告内容是抹黑和诋毁，并指已向英方提「严正交涉」。</p><p>英国外交部昨(15日)天发表第54份《香港半年报告》，外相卡梅伦在报告序言中指出，中英双方在《联合声明》中同意，香港在1997年后享有高度自治至少五十年，除国防和外交事务，其他事宜均由香港自治，故此北京为香港制订的《港区国安法》已经违背了《联合声明》。</p><p>他又细数，《国安法》下，香港的政治反对派几乎已被铲除，异见人士被处以刑罚，公民社会被边缘化，而港府所谓杜绝「软对抗」，其实是针对那些对中港政府支持稍稍不够坚定不移的人。他更指责港府以《国安法》为由，悬红通缉13名因行使自由而流散海外的港人，当中包括身处英国的，他强调，英国不会容忍外国势力恐吓和骚扰身在英国的人，直言《国安法》无权在英国生效，港人在当地是安全的。</p><p>至于匆匆于上月23日生效的《维护国家安全条例》(简称《国安条例》)，卡梅伦认为，很有可能不符国际人权法律，而条例缺乏国际认可的保障人权标准，将对香港民众行使权利和自由的能力产生负面影响，敦促港府尊重《基本法》赋予港人的权利和自由，捍卫高度自治，并按照国际承诺和法律义务行事。</p><p>卡梅伦又说，香港国际金融中心地位，建基于法治和司法独立，现时的经济丶货币及贸易制度虽然仍是独特和有活力，但近期的发展已形成负面势头；若要扭转这势头，港府必须让港人重享人权自由。他保证，见到中港政府破坏香港法治或削弱香港权利和自由时，英国必会发声。</p><p>有关报告涵盖去年7月至12月，报告罗列香港在该时段发生的问题，包括传媒大亨黎智英受审。而因应《国安法》推出的港人 BNO移民政策，自2021年1月31日推出后，截至去年第叁季，英国共收到约19.1万份申请，已批出18.47万份签证。</p><p><strong>中方：已就报告向英方提交涉</strong></p><p>不过，中国外交部驻港公署同日发表声明，否定英国对香港事务的发言权，指香港回归后，《联合声明》的历史使命已经完成，敦促英方尽早放下殖民傲慢和霸道思维，停止插手干预香港事务和中国内政。</p><p>《联合声明》由中英两国签订，双方同意，香港于1997年回归中国后，生活方式和制度五十年不变。该份声明且已放在联合国备桉。</p><p>公署发言人批评英国「故技重演」，「拿《中英联合声明》大做文章，老调重弹攻击抹黑一国两制」，并恶意诋毁《国安法》丶《国安条例》及新选举制度；发言人又重申，《国安条例》为外国投资者提供更安全丶稳定丶高效的营商环境。</p><p>香港政府亦强烈谴责和反对报告对香港的「失实言论和污蔑抹黑」，指《国安条例》为香港提供了更安全的营商条件，「无论英方进行多少次唱衰抹黑，都不可能改变这个铁的事实。」</p><p>中国驻英国使馆发言人亦提评报告，指是罔顾事实和颠倒黑白，中方对此强烈不满丶坚决反对，声言已向英方提出严正交涉，敦促英方停止发表有关报告丶包庇罪犯及「豢养乱港分子」。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWKL.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E8%258B%25B1%25E5%259B%25BD%25E6%258A%25A5%25E5%2591%258A%25E6%258C%2587%25E9%25A6%2599%25E6%25B8%25AF23%25E6%259D%25A1%25E7%25AB%258B%25E6%25B3%2595%25E5%258F%25AF%25E8%2583%25BD%25E4%25B8%258D%25E7%25AC%25A6%25E5%259B%25BD%25E9%2599%2585%25E4%25BA%25BA%25E6%259D%2583-%25E7%25BB%258F%25E8%25B4%25B8%25E5%25B7%25B2%25E7%258E%25B0%25E8%25B4%259F%25E9%259D%25A2%25E5%258A%25BF%25E5%25A4%25B4-%25E4%25B8%25AD%25E6%2596%25B9%25E6%258F%2590%25E4%25BA%25A4%25E6%25B6%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E6%8A%A5%E5%91%8A%E6%8C%87%E9%A6%99%E6%B8%AF23%E6%9D%A1%E7%AB%8B%E6%B3%95%E5%8F%AF%E8%83%BD%E4%B8%8D%E7%AC%A6%E5%9B%BD%E9%99%85%E4%BA%BA%E6%9D%83%20%E7%BB%8F%E8%B4%B8%E5%B7%B2%E7%8E%B0%E8%B4%9F%E9%9D%A2%E5%8A%BF%E5%A4%B4%20%E4%B8%AD%E6%96%B9%E6%8F%90%E4%BA%A4%E6%B6%89%20-%20https%3A%2F%2Frfi.my%2FAWKL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E6%8A%A5%E5%91%8A%E6%8C%87%E9%A6%99%E6%B8%AF23%E6%9D%A1%E7%AB%8B%E6%B3%95%E5%8F%AF%E8%83%BD%E4%B8%8D%E7%AC%A6%E5%9B%BD%E9%99%85%E4%BA%BA%E6%9D%83%20%E7%BB%8F%E8%B4%B8%E5%B7%B2%E7%8E%B0%E8%B4%9F%E9%9D%A2%E5%8A%BF%E5%A4%B4%20%E4%B8%AD%E6%96%B9%E6%8F%90%E4%BA%A4%E6%B6%89%20-%20https%3A%2F%2Frfi.my%2FAWKL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWKL.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E6%8A%A5%E5%91%8A%E6%8C%87%E9%A6%99%E6%B8%AF23%E6%9D%A1%E7%AB%8B%E6%B3%95%E5%8F%AF%E8%83%BD%E4%B8%8D%E7%AC%A6%E5%9B%BD%E9%99%85%E4%BA%BA%E6%9D%83%20%E7%BB%8F%E8%B4%B8%E5%B7%B2%E7%8E%B0%E8%B4%9F%E9%9D%A2%E5%8A%BF%E5%A4%B4%20%E4%B8%AD%E6%96%B9%E6%8F%90%E4%BA%A4%E6%B6%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 11:34</div><img src="https://s.rfi.fr/media/display/789b010a-69c8-11ee-a14b-005056bfb2b6/w:1280/p:16x9/Carte-Chine-Pekin.jpg"><p><strong>中国人权组织在一份报告中表示，尽管中国承诺结束集体惩罚的做法，但中国仍继续非法针对活动人士和持不同政见者的家人。        </strong></p><div><p>据卫报the Guardian引述中国人权卫士（CHRD）的报告称，迫害包括恐吓和骚扰、强制驱逐、旅行禁令、对家庭成员提起刑事诉讼以及阻止儿童上学，数十年来一直影响着中国各地的人民和侨民社区。</p><p>国际人权法禁止集体惩罚行为。</p><p>去年12月28日，中国当局誓言要废除对已决罪犯家属的集体惩罚做法。持不同政见者和活动人士通常被中国法院判处刑事犯罪。此前，中国居民就地方当局发布的对狱中人员家属实施教育、就业和社会保障限制的通知向中国最高立法机构全国人民代表大会进行游说。</p><p>据香港媒体报道，全国人大回应称，“经审查，我们认为这些通知不符合宪法，也不符合教育、就业和社会保险等法律，因此我们敦促有关部门废止这些文件。” 官方称，“犯罪分子应该为自己的不当行为承担责任并受到惩罚，这意味着其他人不应受到惩罚。这是现代社会法治的基本原则。”</p><p>CHRD告诉《卫报》，没有证据表明有立法活动来结束集体惩罚，自宣布以来也没有官员被追究责任。 CHRD主任夏蕾表示，这似乎是一项国家支持的政策。 “新法律很难消除针对这些维权者的选择性执法。”</p><p>周一发布的这份报告重点关注了 2023 年和 2024 年初涉嫌集体惩罚的行为，其中有“数十起”新案件或正在进行的案件，他们称这些案件表明这种做法仍在继续。</p><p>人权捍卫者委员会注意到的案件之一是被监禁的活动人士何芳梅的案件，她的律师称，她的年幼的孩子在四月份被强行关押在精神病院后失踪。</p><p>2020 年 10 月，何方梅和她的丈夫因针对有缺陷的疫苗采取行动而被拘留。怀孕五个月的何某和当时五岁、七岁的两个孩子被送进河南新乡工济精神病院。生下孩子两个月后，他被逮捕并送往看守所。</p><p>尽管其他家庭成员努力让三个孩子出院，但他们仍被留在医院。报道称，何的姐姐的探望请求遭到拒绝。据称，这名儿子后来在未经家人同意的情况下被送往寄养机构，今年一月，一个活动团体声称当局欺骗了何的母亲正式放弃监护权。</p><p>何的律师表示，医院决定停止收治她们，并将她们交给当地县官员后，这两个女孩就失踪了。</p><p>《卫报》称无法联系到该县政府，精神病院也表示无法提供有关此案的任何信息。</p><p>《卫报》的报道称，被监禁的律师王章的妻子王丽琴上周在接受记者采访时表示，今年早些时候，当局曾威胁如果她在网上发布有关她丈夫的信息，将再次拘留她，或者带走她的孩子。</p><p>据她说，“我们在北京生活的八年里，有11次被强制搬迁。”她还被拘留并入狱两年半。她说，“我不在期间，我的四个孩子在我婆婆的照顾下不断受到骚扰和监视。”</p><p>CHRD 的报告还包括证词，称 3 月份警方搜查了2020 年出狱的人权律师王全章之子的新学校。</p><p>在另一起案件中，被监禁的IT工人牛腾宇的父亲今年1月在山西被国保警察带走。他后来被释放。牛腾宇于2019年因在2019年发布有关习近平女儿和其他高级官员信息的网站而被拘留，并被判处14年监禁。据人权组织称，他据称在监狱中遭受酷刑。</p><p>另外，备受瞩目的维吾尔活动人士雷汉·阿萨特(Rayhan Asat )表示，如果有人在电话中哭泣，与被关押在新疆的弟弟的家人通话时间被限制在两分钟内，通话中家人甚至不敢哭泣。</p><p>《卫报》的报道说，CHRD呼吁中国停止这种做法，立法禁止集体惩罚，并取消对受影响家庭成员的所有出境禁令。它还呼吁国际社会和联合国加大对北京的压力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWM8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25BA%25BA%25E6%259D%2583%25E7%25BB%2584%25E7%25BB%2587%25E6%258A%25A5%25E5%2591%258A%25E5%258F%2591%25E7%258E%25B0%25E4%25B8%25AD%25E5%259B%25BD%25E7%25BB%25A7%25E7%25BB%25AD%25E9%259D%259E%25E6%25B3%2595%25E8%25BF%25AB%25E5%25AE%25B3%25E5%25BC%2582%25E8%25A7%2581%25E4%25BA%25BA%25E5%25A3%25AB%25E5%25AE%25B6%25E5%25B1%259E&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BA%BA%E6%9D%83%E7%BB%84%E7%BB%87%E6%8A%A5%E5%91%8A%E5%8F%91%E7%8E%B0%E4%B8%AD%E5%9B%BD%E7%BB%A7%E7%BB%AD%E9%9D%9E%E6%B3%95%E8%BF%AB%E5%AE%B3%E5%BC%82%E8%A7%81%E4%BA%BA%E5%A3%AB%E5%AE%B6%E5%B1%9E%20-%20https%3A%2F%2Frfi.my%2FAWM8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BA%BA%E6%9D%83%E7%BB%84%E7%BB%87%E6%8A%A5%E5%91%8A%E5%8F%91%E7%8E%B0%E4%B8%AD%E5%9B%BD%E7%BB%A7%E7%BB%AD%E9%9D%9E%E6%B3%95%E8%BF%AB%E5%AE%B3%E5%BC%82%E8%A7%81%E4%BA%BA%E5%A3%AB%E5%AE%B6%E5%B1%9E%20-%20https%3A%2F%2Frfi.my%2FAWM8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWM8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BA%BA%E6%9D%83%E7%BB%84%E7%BB%87%E6%8A%A5%E5%91%8A%E5%8F%91%E7%8E%B0%E4%B8%AD%E5%9B%BD%E7%BB%A7%E7%BB%AD%E9%9D%9E%E6%B3%95%E8%BF%AB%E5%AE%B3%E5%BC%82%E8%A7%81%E4%BA%BA%E5%A3%AB%E5%AE%B6%E5%B1%9E&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
