--- a/articles/rfi/999998.md
+++ b/articles/rfi/999998.md
@@ -1,5 +1,5 @@
-<!--1713258907000-->
-[美媒：赖清德在国安问题上向美国释放安抚信号](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240416-%E7%BE%8E%E5%AA%92-%E8%B5%96%E6%B8%85%E5%BE%B7%E5%9C%A8%E5%9B%BD%E5%AE%89%E9%97%AE%E9%A2%98%E4%B8%8A%E5%90%91%E7%BE%8E%E5%9B%BD%E9%87%8A%E6%94%BE%E5%AE%89%E6%8A%9A%E4%BF%A1%E5%8F%B7)
+<!--1713258908000-->
+[中国钢铁南美洲泛滥 当地喊上关税防堵](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%97%E7%BE%8E%E6%B4%B2%E6%B3%9B%E6%BB%A5-%E5%BD%93%E5%9C%B0%E5%96%8A%E4%B8%8A%E5%85%B3%E7%A8%8E%E9%98%B2%E5%A0%B5)
 ------
 
-<div>16/04/2024 - 11:12</div><img src="https://s.rfi.fr/media/display/bc31a90e-b398-11ee-af9a-005056a97e36/w:1280/p:16x9/AP24015229624415.jpg"><p><strong>据华尔街日报4月16日报道，台湾候任总统赖清德拟在国家安全团队中留用现任班底人员，这是在向美国发出信号，表明在白宫疲于应对乌克兰和加沙地缘政治危机之际，赖清德的新政府不会掀起太多风浪。        </strong></p><div><p>报道援引知情人士透露，加入国家安全团队的人选预计将于本月晚些时候公布，其中包括一些美国政府熟悉的面孔。</p><p>有政府官员和政治分析人士表示，上述任命计划实际上相当于对台北现任内阁的重新洗牌，意在展示一种连续性，可能会受拜登政府欢迎。</p><p>赖清德现任台湾副总统，在1月份大选中获胜，下个月将正式就职。据美国官员称，尽管赖清德上任将使民进党史无前例地进入在台湾执政的第三个任期，但白宫此前担心，赖清德比蔡英文更有可能发表踩红线言论激怒中国政府，并将美国卷入一场危险对抗。</p><p>驻美国的一些台湾问题专家称，任命一个几乎完全复刻前一届班底的国家安全团队将受美国欢迎，并有助于安抚白宫，让美国知道赖清德不太可能显著改变台湾对中国的态度。</p><p>华盛顿智库德国马歇尔基金会亚洲项目主任葛来仪说：“拜登政府希望看到台湾政策的连续性。”</p><p>不过，上述任命计划对说服北京相信赖清德意图的作用较弱。在中国看来，赖清德和他的当选副总统萧美琴(Hsiao Bi-khim)是台湾独立的坚定倡导者——这对共产党领导人来说是一条红线，他们不排除在必要情况下通过武力吞并台湾的选项。</p><p>中国国台办没有回应华尔街日报置评请求。</p><p>据熟悉内情的人士透露，赖清德计划任命现任台湾国安会秘书长顾立雄担任国防部长；现任外交部长吴钊燮则回锅执掌国安会，他在2016年至2017年曾担任这一职务。</p><p>上述知情人士说，目前担任总统府秘书长的林佳龙将接替吴钊燮的外交部长职务；林佳龙在华盛顿不太为人所知。</p><p>与此同时中央社报道说，总统蔡英文周二在接见新西兰国会跨党派友台小组访问团，介绍陪同接见的总统府秘书长林佳龙、外交部长吴钊燮时，提及林佳龙是下一任的外交部长，吴钊燮是未来的国安会秘书长。</p><p>由于候任总统赖清德、候任行政院长卓荣泰都尚未宣布国安会秘书长、外交部长人事案，蔡英文总统今天介绍林佳龙、吴钊燮的未来职务，引发关注。</p><p>专研台湾地缘政治的学者南乐（Lev Nachman）对华尔街日报表示，虽然林佳龙的外交政策经验相对有限，但他曾在许多高层职位担任国家要职，肯定堪当此任。</p><p>无论如何，如果拜登政府官员看到这样一个国家安全团队，“他们会认为萧美琴仍将在外交工作中扮演重要角色，” Nachman还表示，在对中国政策方面，赖清德计划任命长期研究两岸关系的学者邱垂正担任陆委会主委。此前，邱垂正曾在陆委会担任副主委六年多时间。</p><p>华日的报道还强调出，有望执掌国防部的顾立雄将是2000年代初以来少数几位没有军衔的台湾防长之一，他有望领导台湾军队实施全面改革；台湾军队曾经隶属于国民党，在2000年代初进行了国家化。</p><p style="text-align:start">台湾国防安全研究院（Institute for National Defense and Security Research）研究员苏紫云告诉华日说，文职人员进入国防部可以促进改革，这是最重要的一点；该研究院位于台北，是一个台湾军方支持的无党派智库。苏紫云表示，挑选这样一个国家安全团队“表明将稳定地维持现状”。</p><p>此前，赖清德第一波内阁名单已在10日公布，由民进党前主席卓荣泰、青平台基金会董事长郑丽君出任正副阁揆，国发会主委龚明鑫担任行政院秘书长、行政院发言人则为民进党中常委陈世凯。</p><p style="text-align:start">据中央社报道，卓荣泰12日公布第二波内阁名单由前立委刘世芳出任内政部长、现任行政院秘书长李孟谚接掌交通部长、台北地检署检察长郑铭谦担任法务部长、国立中山大学校长郑英耀出任教育部长、知名作家小野（本名：李远）担任文化部长。</p><p>今天16日公布的内阁第三波阁员名单，包括经济部长由崇越集团董事长郭智辉出任、数位发展部长由中央研究院资讯科技创新研究中心的资通安全专题中心特聘研究员黄彦男接任、国科会主委由南台科技大学校长吴诚文出任、国发会主委由资诚创新咨询公司前董事长刘镜清出任、金管会主委国立政治大学商学院副院长彭金隆接任、工程会主委由前中油董事长陈金德出任。</p><p style="text-align:start">预计，新内阁前后应当会有5波内阁人事颁布。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWLp.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240416-%25E7%25BE%258E%25E5%25AA%2592-%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B7%25E5%259C%25A8%25E5%259B%25BD%25E5%25AE%2589%25E9%2597%25AE%25E9%25A2%2598%25E4%25B8%258A%25E5%2590%2591%25E7%25BE%258E%25E5%259B%25BD%25E9%2587%258A%25E6%2594%25BE%25E5%25AE%2589%25E6%258A%259A%25E4%25BF%25A1%25E5%258F%25B7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E8%B5%96%E6%B8%85%E5%BE%B7%E5%9C%A8%E5%9B%BD%E5%AE%89%E9%97%AE%E9%A2%98%E4%B8%8A%E5%90%91%E7%BE%8E%E5%9B%BD%E9%87%8A%E6%94%BE%E5%AE%89%E6%8A%9A%E4%BF%A1%E5%8F%B7%20-%20https%3A%2F%2Frfi.my%2FAWLp.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E8%B5%96%E6%B8%85%E5%BE%B7%E5%9C%A8%E5%9B%BD%E5%AE%89%E9%97%AE%E9%A2%98%E4%B8%8A%E5%90%91%E7%BE%8E%E5%9B%BD%E9%87%8A%E6%94%BE%E5%AE%89%E6%8A%9A%E4%BF%A1%E5%8F%B7%20-%20https%3A%2F%2Frfi.my%2FAWLp.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWLp.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%AA%92%EF%BC%9A%E8%B5%96%E6%B8%85%E5%BE%B7%E5%9C%A8%E5%9B%BD%E5%AE%89%E9%97%AE%E9%A2%98%E4%B8%8A%E5%90%91%E7%BE%8E%E5%9B%BD%E9%87%8A%E6%94%BE%E5%AE%89%E6%8A%9A%E4%BF%A1%E5%8F%B7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>16/04/2024 - 10:36</div><img src="https://s.rfi.fr/media/display/c23d79fe-154a-11ea-af1d-005056a99247/w:1280/p:16x9/amerique-latine-620x350.jpg"><p><strong>拉丁美洲的钢铁行业正面临中国的倾销，中国的钢铁倾销正在涌入南美洲市场并危及许多就业机会。 作为回应，一些濒临破产的钢厂要求征收进口税。        </strong></p><div><p>据法新社今天报道称，去年，计有1000万吨中国钢铁涌入拉美，显示同比增长44%。 20年前，中国在此仅出口8.5万吨。</p><p>根据拉丁美洲钢铁协会 (Alacero) 的数据，过去 20 年来，中国在全球钢铁市场的份额从 15% 增加到 54%。</p><p>由于中国建筑业大幅放缓，释放了产品用于出口，国际对中国钢铁行业产能过剩的担忧也有所增加。</p><p>Alacero 执行董事亚历杭德罗·瓦格纳 (Alejandro Wagner) 感叹道，“中国在拉丁美洲的影响力太大了。” 据他告诉法新社：“没有人反对国家之间的贸易，但我们只要公平贸易。”</p><p>美国财政部长耶伦在最近访问中国期间表达了对中国“生产过剩”的担忧，并表示美国“不会接受”世界充斥着中国商品而亏损。</p><p>2018年，美国对中国钢铁加征25%的关税。 智利和巴西工业界愿意效仿美国这个例子。</p><p>智利主要钢厂Huachipato、2,700名直接员工和20,000名分包商已向智利反贸易扭曲委员会提出正式请求。</p><p>位于圣地亚哥以南500公里的塔尔卡瓦诺的该公司宣布逐步暂停工厂活动，因在智利销售的中国钢材比当地钢材便宜40%而让该钢铁厂不堪重负。</p><p>该拉丁美洲钢铁协会委员会发现“有足够的证据支持中国存在倾销”，并建议征收15%的关税，而智利主要钢厂华奇帕托认为税额“不够”。智利主要钢厂公司董事 Jean Paul Sauré称，“我们并不要求政府补贴或救助。智利主要钢厂Huachipato 有能力在竞争激烈的环境中盈利。”</p><p>据法新社说，采取保护措施的决定并不容易做出。 智利于2006年与中国签署了自由贸易协定，使该国面临可能的贸易报复。</p><p>拉丁美洲地区最大的钢铁生产国巴西的情况也令人担忧。 根据 Aco Institute 的数据，去年从中国的进口增加了 50%，巴西自己的产量下降了 6.5%。</p><p>Gerdau是这家南美钢铁巨头最大的雇主之一，已经解雇了700名工人。 该公司表示，由于“面对中国钢材进口的掠夺性条件，巴西市场面临困难”，最后一批钢材于二月份离开了圣保罗的 Pindamonhangaba 工厂。该公司不愿回应法新社的提问。</p><p>巴西钢厂还要求像墨西哥对205种钢铁产品征收25%的关税。</p><p>钢铁业占墨西哥 GDP 的 1.4%，创造了 70 万个就业岗位。 根据官方数据，77.5%的出口销往美国。</p><p>在拉丁美洲，钢铁行业创造了 140 万个就业机会，这些就业机会高度专业化且难以再培训。</p><p>据拉丁美洲和加勒比委员会 (ECLAC)经济部执行秘书曼努埃尔·萨拉查-西里纳赫斯 (Manuel Salazar-Xirinachs) 向法新社解释说，对该地区的短期影响将取决于中国是否采取措施减少“过剩”产量，以及在地方层面是否采取旨在减少钢铁进口的举措。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWLP.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B8%25AD%25E5%259B%25BD%25E9%2592%25A2%25E9%2593%2581%25E5%258D%2597%25E7%25BE%258E%25E6%25B4%25B2%25E6%25B3%259B%25E6%25BB%25A5-%25E5%25BD%2593%25E5%259C%25B0%25E5%2596%258A%25E4%25B8%258A%25E5%2585%25B3%25E7%25A8%258E%25E9%2598%25B2%25E5%25A0%25B5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%97%E7%BE%8E%E6%B4%B2%E6%B3%9B%E6%BB%A5%20%E5%BD%93%E5%9C%B0%E5%96%8A%E4%B8%8A%E5%85%B3%E7%A8%8E%E9%98%B2%E5%A0%B5%20-%20https%3A%2F%2Frfi.my%2FAWLP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%97%E7%BE%8E%E6%B4%B2%E6%B3%9B%E6%BB%A5%20%E5%BD%93%E5%9C%B0%E5%96%8A%E4%B8%8A%E5%85%B3%E7%A8%8E%E9%98%B2%E5%A0%B5%20-%20https%3A%2F%2Frfi.my%2FAWLP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWLP.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%97%E7%BE%8E%E6%B4%B2%E6%B3%9B%E6%BB%A5%20%E5%BD%93%E5%9C%B0%E5%96%8A%E4%B8%8A%E5%85%B3%E7%A8%8E%E9%98%B2%E5%A0%B5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
