--- a/articles/rfi/999999.md
+++ b/articles/rfi/999999.md
@@ -1,5 +1,5 @@
-<!--1713258907000-->
-[有学者认为中国产能过剩的根源因独生子女政策](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E6%9C%89%E5%AD%A6%E8%80%85%E8%AE%A4%E4%B8%BA%E4%B8%AD%E5%9B%BD%E4%BA%A7%E8%83%BD%E8%BF%87%E5%89%A9%E7%9A%84%E6%A0%B9%E6%BA%90%E5%9B%A0%E7%8B%AC%E7%94%9F%E5%AD%90%E5%A5%B3%E6%94%BF%E7%AD%96)
+<!--1713258908000-->
+[英国报告指香港23条立法可能不符国际人权 经贸已现负面势头 中方提交涉](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E8%8B%B1%E5%9B%BD%E6%8A%A5%E5%91%8A%E6%8C%87%E9%A6%99%E6%B8%AF23%E6%9D%A1%E7%AB%8B%E6%B3%95%E5%8F%AF%E8%83%BD%E4%B8%8D%E7%AC%A6%E5%9B%BD%E9%99%85%E4%BA%BA%E6%9D%83-%E7%BB%8F%E8%B4%B8%E5%B7%B2%E7%8E%B0%E8%B4%9F%E9%9D%A2%E5%8A%BF%E5%A4%B4-%E4%B8%AD%E6%96%B9%E6%8F%90%E4%BA%A4%E6%B6%89)
 ------
 
-<div>16/04/2024 - 10:58</div><img src="https://s.rfi.fr/media/display/72e36c18-ed47-11ee-ab47-005056bf30b7/w:1280/p:16x9/chine-6605779d2d955840074230.png"><p><strong>美国及欧洲关切中国产能过剩问题，人口专家易富贤指出根源是独生子女政策，因独生子女的家长担心养老，于是减少消费、存钱养老，内需不足且储蓄率过高而加剧了产能过剩。        </strong></p><div><p>据中央社今天称，美国之音（VOA）14日刊登中国人口问题专家、美国威斯康辛大学麦迪逊分校高级研究员易富贤的评论时提出此一观点。</p><p>易富贤指出，最近美国财长叶伦（Janet Yellen）访问中国时一再提及，中国的“产能过剩”正影响美国工人和企业。</p><p>针对中国“产能过剩”的根源，叶伦认为是中国政府的产业补贴。中国清华大学历史系教授秦晖认为是“低人权优势”，北大国家发展研究院教授姚洋认为是中国“过高的储蓄率”。</p><p>但易富贤认为，其实归根究底是因为中国的内需不足。2018至2022年中国的最终消费占国内生产毛额（GDP）的比重平均只有54.7%，远低于美国的82.4%，也低于欧盟的73.5%，就连文化和制度与中国类似的越南也有65.5%。</p><p>若以居民消费占GDP比例来看，中国38.2%的比例也低于美国68.1%、越南56%及欧盟52.2%。</p><p>易富贤提出汽车为例，2023年中国生产3016万辆，国内外共销售3009万辆，其中出口522万辆。如果中国居民消费占GDP的比例能从38.2%提高到50%至60%的国际水准，那么国内市场就足以消化产量，不存在产能过剩。</p><p>易富贤进一步指出，中国独生子女政策是产能过剩的根源。</p><p>他解释，愿意为孩子花钱是父母的生物学本能，因此0至14岁儿童占总人口的比例与居民消费呈正相关。但中国独生子女政策，导致0至14岁儿童占比从1982年的33%降到2023年的13%。而1982年15至64岁劳动力占比为62%，2004年至2023年再提高到72%至75%，高于国际社会的64%至66%。</p><p>从中国人口结构变动可看出，由于家庭规模缩小减少了家庭刚需，加上劳动力额外过剩，中国居民可支配收入占GDP的比例自1982年的62%降至当前的43%。</p><p>易富贤表示，独生子女的家长担心养老，于是减少消费、存钱养老。同时，政府、企业和富人也保持高储蓄率。因此，2018年至2022年中国的储蓄率高达45%，因而加剧了产能过剩。易富贤称，此外，中美贸易战后，中国产品出口美国减少，也导致中国就业困难，尤其是青年失业率攀升，不利于内需市场。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWLf.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E6%259C%2589%25E5%25AD%25A6%25E8%2580%2585%25E8%25AE%25A4%25E4%25B8%25BA%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BA%25A7%25E8%2583%25BD%25E8%25BF%2587%25E5%2589%25A9%25E7%259A%2584%25E6%25A0%25B9%25E6%25BA%2590%25E5%259B%25A0%25E7%258B%25AC%25E7%2594%259F%25E5%25AD%2590%25E5%25A5%25B3%25E6%2594%25BF%25E7%25AD%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%9C%89%E5%AD%A6%E8%80%85%E8%AE%A4%E4%B8%BA%E4%B8%AD%E5%9B%BD%E4%BA%A7%E8%83%BD%E8%BF%87%E5%89%A9%E7%9A%84%E6%A0%B9%E6%BA%90%E5%9B%A0%E7%8B%AC%E7%94%9F%E5%AD%90%E5%A5%B3%E6%94%BF%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWLf.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%9C%89%E5%AD%A6%E8%80%85%E8%AE%A4%E4%B8%BA%E4%B8%AD%E5%9B%BD%E4%BA%A7%E8%83%BD%E8%BF%87%E5%89%A9%E7%9A%84%E6%A0%B9%E6%BA%90%E5%9B%A0%E7%8B%AC%E7%94%9F%E5%AD%90%E5%A5%B3%E6%94%BF%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWLf.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWLf.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%9C%89%E5%AD%A6%E8%80%85%E8%AE%A4%E4%B8%BA%E4%B8%AD%E5%9B%BD%E4%BA%A7%E8%83%BD%E8%BF%87%E5%89%A9%E7%9A%84%E6%A0%B9%E6%BA%90%E5%9B%A0%E7%8B%AC%E7%94%9F%E5%AD%90%E5%A5%B3%E6%94%BF%E7%AD%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 09:34</div><img src="https://s.rfi.fr/media/display/69e1aba4-fbc3-11ee-bb47-005056a90284/w:1280/p:16x9/hk-201.png"><p><strong>英国外相卡梅伦在最新发表的《香港半年报告》中指出，北京为香港制订的第一条国安法违背《中英联合声明》，且令香港的反对派几乎被铲除；而第二条匆匆通过的国安条例，很可能与国际人权法不相容，势将对港人享用人权和自由产生负面影响，亦经贸方面出现负面势头。但他没有敦促港府废除该法，只是再次要求港府尊重《基本法》赋予港人的权利和自由，捍卫高度自治。        </strong></p><div><p>香港政府丶中国外文部驻港公署及中国驻英大使馆对报告分别发文谴责和表达强烈不满，指报告内容是抹黑和诋毁，并指已向英方提「严正交涉」。</p><p>英国外交部昨(15日)天发表第54份《香港半年报告》，外相卡梅伦在报告序言中指出，中英双方在《联合声明》中同意，香港在1997年后享有高度自治至少五十年，除国防和外交事务，其他事宜均由香港自治，故此北京为香港制订的《港区国安法》已经违背了《联合声明》。</p><p>他又细数，《国安法》下，香港的政治反对派几乎已被铲除，异见人士被处以刑罚，公民社会被边缘化，而港府所谓杜绝「软对抗」，其实是针对那些对中港政府支持稍稍不够坚定不移的人。他更指责港府以《国安法》为由，悬红通缉13名因行使自由而流散海外的港人，当中包括身处英国的，他强调，英国不会容忍外国势力恐吓和骚扰身在英国的人，直言《国安法》无权在英国生效，港人在当地是安全的。</p><p>至于匆匆于上月23日生效的《维护国家安全条例》(简称《国安条例》)，卡梅伦认为，很有可能不符国际人权法律，而条例缺乏国际认可的保障人权标准，将对香港民众行使权利和自由的能力产生负面影响，敦促港府尊重《基本法》赋予港人的权利和自由，捍卫高度自治，并按照国际承诺和法律义务行事。</p><p>卡梅伦又说，香港国际金融中心地位，建基于法治和司法独立，现时的经济丶货币及贸易制度虽然仍是独特和有活力，但近期的发展已形成负面势头；若要扭转这势头，港府必须让港人重享人权自由。他保证，见到中港政府破坏香港法治或削弱香港权利和自由时，英国必会发声。</p><p>有关报告涵盖去年7月至12月，报告罗列香港在该时段发生的问题，包括传媒大亨黎智英受审。而因应《国安法》推出的港人 BNO移民政策，自2021年1月31日推出后，截至去年第叁季，英国共收到约19.1万份申请，已批出18.47万份签证。</p><p><strong>中方：已就报告向英方提交涉</strong></p><p>不过，中国外交部驻港公署同日发表声明，否定英国对香港事务的发言权，指香港回归后，《联合声明》的历史使命已经完成，敦促英方尽早放下殖民傲慢和霸道思维，停止插手干预香港事务和中国内政。</p><p>《联合声明》由中英两国签订，双方同意，香港于1997年回归中国后，生活方式和制度五十年不变。该份声明且已放在联合国备桉。</p><p>公署发言人批评英国「故技重演」，「拿《中英联合声明》大做文章，老调重弹攻击抹黑一国两制」，并恶意诋毁《国安法》丶《国安条例》及新选举制度；发言人又重申，《国安条例》为外国投资者提供更安全丶稳定丶高效的营商环境。</p><p>香港政府亦强烈谴责和反对报告对香港的「失实言论和污蔑抹黑」，指《国安条例》为香港提供了更安全的营商条件，「无论英方进行多少次唱衰抹黑，都不可能改变这个铁的事实。」</p><p>中国驻英国使馆发言人亦提评报告，指是罔顾事实和颠倒黑白，中方对此强烈不满丶坚决反对，声言已向英方提出严正交涉，敦促英方停止发表有关报告丶包庇罪犯及「豢养乱港分子」。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWKL.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E8%258B%25B1%25E5%259B%25BD%25E6%258A%25A5%25E5%2591%258A%25E6%258C%2587%25E9%25A6%2599%25E6%25B8%25AF23%25E6%259D%25A1%25E7%25AB%258B%25E6%25B3%2595%25E5%258F%25AF%25E8%2583%25BD%25E4%25B8%258D%25E7%25AC%25A6%25E5%259B%25BD%25E9%2599%2585%25E4%25BA%25BA%25E6%259D%2583-%25E7%25BB%258F%25E8%25B4%25B8%25E5%25B7%25B2%25E7%258E%25B0%25E8%25B4%259F%25E9%259D%25A2%25E5%258A%25BF%25E5%25A4%25B4-%25E4%25B8%25AD%25E6%2596%25B9%25E6%258F%2590%25E4%25BA%25A4%25E6%25B6%2589&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E6%8A%A5%E5%91%8A%E6%8C%87%E9%A6%99%E6%B8%AF23%E6%9D%A1%E7%AB%8B%E6%B3%95%E5%8F%AF%E8%83%BD%E4%B8%8D%E7%AC%A6%E5%9B%BD%E9%99%85%E4%BA%BA%E6%9D%83%20%E7%BB%8F%E8%B4%B8%E5%B7%B2%E7%8E%B0%E8%B4%9F%E9%9D%A2%E5%8A%BF%E5%A4%B4%20%E4%B8%AD%E6%96%B9%E6%8F%90%E4%BA%A4%E6%B6%89%20-%20https%3A%2F%2Frfi.my%2FAWKL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E6%8A%A5%E5%91%8A%E6%8C%87%E9%A6%99%E6%B8%AF23%E6%9D%A1%E7%AB%8B%E6%B3%95%E5%8F%AF%E8%83%BD%E4%B8%8D%E7%AC%A6%E5%9B%BD%E9%99%85%E4%BA%BA%E6%9D%83%20%E7%BB%8F%E8%B4%B8%E5%B7%B2%E7%8E%B0%E8%B4%9F%E9%9D%A2%E5%8A%BF%E5%A4%B4%20%E4%B8%AD%E6%96%B9%E6%8F%90%E4%BA%A4%E6%B6%89%20-%20https%3A%2F%2Frfi.my%2FAWKL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWKL.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E6%8A%A5%E5%91%8A%E6%8C%87%E9%A6%99%E6%B8%AF23%E6%9D%A1%E7%AB%8B%E6%B3%95%E5%8F%AF%E8%83%BD%E4%B8%8D%E7%AC%A6%E5%9B%BD%E9%99%85%E4%BA%BA%E6%9D%83%20%E7%BB%8F%E8%B4%B8%E5%B7%B2%E7%8E%B0%E8%B4%9F%E9%9D%A2%E5%8A%BF%E5%A4%B4%20%E4%B8%AD%E6%96%B9%E6%8F%90%E4%BA%A4%E6%B6%89&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
