--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-17 [极昼工作室｜基层产科静悄悄](/articles/cdt/341632.md)
+
+4-17 [建设性意见｜同济的学生用愚蠢的方式问了一个重要的大麻问题](/articles/cdt/341634.md)
+
 4-17 [南风窗｜研究生也去干保洁了，“存钱最重要”](/articles/cdt/341637.md)
 
 4-17 [非虚构故事｜这简直就是入室抢劫！](/articles/cdt/341641.md)
@@ -596,8 +600,4 @@
 3-14 [张首辅Plus｜苏联政治笑话中的干群关系](/articles/cdt/342668.md)
 
 3-14 [北青深一度｜清退潮下的“编外人”](/articles/cdt/342671.md)
-
-3-14 [衣者褚｜他们总是这么一本正经地说假话](/articles/cdt/342674.md)
-
-3-14 [基本常识｜冀外媒体央视记者采访燕郊爆炸事故，安的是什么心？](/articles/cdt/342676.md)
 
