--- a/articles/rfi/999951.md
+++ b/articles/rfi/999951.md
@@ -1,5 +1,5 @@
-<!--1713345302000-->
-[澳大利亚发表首个「国家防卫战略」强调中国威胁 北京反驳](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240417-%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA-%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5-%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81-%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3)
+<!--1713350701000-->
+[美亚太助卿康达会晤中国国台办官员 学者称不太寻常](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240417-%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98-%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8)
 ------
 
-<div>17/04/2024 - 10:27</div><img src="https://s.rfi.fr/media/display/95825426-47e1-11ed-a455-005056a9a7b9/w:1280/p:16x9/drapeau%20Australie.jpg"><p><strong>澳大利亚今天发布了该国首个国防战略，该战略重点关注太平洋地区，称以应对中国的“胁迫策略”和日益增长的地区冲突风险。中国对此表达不高兴，称中国不是一个威胁，并说也不威胁任何人。        </strong></p><div><p>澳大利亚今天公布首份「国家防卫战略」（National Defence Strategy），显示面对中国“胁迫手段”和太平洋地区冲突风险日增，澳大利亚将进一步聚焦在亚太地区。</p><p>澳大利亚国防部长马勒斯（Richard Marles）透露对区域安全和战争风险的严峻评估，他说，“冷战结束后指引国防规划的乐观假设早已不复存在，” 并警告“中国为实现战略目标而采取了胁迫手段，澳洲不再有10年的冲突战略预警期”。</p><p>马勒斯表示，往后不会将重点放在一支几乎能在世界各地执行各式任务的平衡部队，而是聚焦于保护澳大利亚在亚太地区的利益。</p><p>马勒斯说“我们是海上贸易岛国”，还说“澳大利亚必须能够防止敌人扼杀贸易或阻止进入重要航道，”“入侵澳大利亚的情况无论如何都不太可能发生，正是因为对手毋须踏上澳大利亚国土就可对澳大利亚造成很多的损害”。</p><p>该战略核心是发展一支匿踪核动力潜舰舰队、将关键导弹能力提高两倍，并发展一支大型水面作战舰队。马勒斯说：“拥有我国史上最有能力的海军将是我方投射能力和拒止战略的核心。”</p><p>马勒斯还说，澳大利亚必须能够防止敌人封锁重要航道。</p><p>据法新社今天报道称，中国官方对澳大利亚的国家防卫战略针对中国胁迫威胁，并将中国描述为重要威胁表达不满。中国说，中国不是威胁，也不会威胁任何国家。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWY4.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240417-%25E6%25BE%25B3%25E5%25A4%25A7%25E5%2588%25A9%25E4%25BA%259A%25E5%258F%2591%25E8%25A1%25A8%25E9%25A6%2596%25E4%25B8%25AA-%25E5%259B%25BD%25E5%25AE%25B6%25E9%2598%25B2%25E5%258D%25AB%25E6%2588%2598%25E7%2595%25A5-%25E5%25BC%25BA%25E8%25B0%2583%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A8%2581%25E8%2583%2581-%25E5%258C%2597%25E4%25BA%25AC%25E5%258F%258D%25E9%25A9%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3%20-%20https%3A%2F%2Frfi.my%2FAWY4.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWY4.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E5%8F%91%E8%A1%A8%E9%A6%96%E4%B8%AA%E3%80%8C%E5%9B%BD%E5%AE%B6%E9%98%B2%E5%8D%AB%E6%88%98%E7%95%A5%E3%80%8D%E5%BC%BA%E8%B0%83%E4%B8%AD%E5%9B%BD%E5%A8%81%E8%83%81%20%E5%8C%97%E4%BA%AC%E5%8F%8D%E9%A9%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 11:49</div><img src="https://s.rfi.fr/media/display/7e261e0e-b47b-11ee-8b2f-005056a97e36/w:1280/p:16x9/AP24012403412983.jpg"><p><strong>中国外交部对外声明表示，康达（Daniel Kritenbrink）、白宫国安会中国与台湾事务资深主任柏兰（Sarah Beran）15日于北京会晤马朝旭。国台办16日声明指出，康达、柏兰等人也会晤了仇开明，“阐明了中方关于台湾问题的原则立场”。中央社今天引述学者认为，美国外交官员会晤中共涉台官员，这不太寻常，显示台海议题讯息交流获关切。        </strong></p><div><p>美国务院亚太事务助卿康达等人在北京会晤中国外交部副部长马朝旭、国台办副主任仇开明。台湾成功大学政治学系教授王宏仁今天对中央社剖析，美国外交事务官员会晤中共涉台官员，这不太寻常，其中还有白宫国安会人员随团，显见这趟到访不仅是为了美国国务卿布林肯（Antony Blinken）访问中国铺路，台海议题也是讨论项目。</p><p>王宏仁认为，美国外交系统官员会晤中共涉台官员，这不太寻常，可以视作中美双方包括台海议题在内等各个议题沟通顺畅的表现，也有稳定台海作用；不过国台办系统在中国政府体系算偏于事务性的单位，没有左右台海议题影响力。</p><p>台湾国家政策研究基金会副研究员李正修对中央社表示，过去时任国台办主任张志军也曾赴美访问，美国没有专门部门应对两岸关系，由美国务院等官员接待实为合理；美国外交系统官员在北京会晤国台办官员，这确实较为罕见。</p><p>李正修认为，这显示美中双方对于台海议题有高度关切感，北京多次强调“台湾红线”，拉出涉台单位对话美国；美国则是期盼台海维持现状、不被破坏，相信彼此在这场会晤中充分交换了意见，也有找到共识，外交场合的会晤，台面下谈及的、接触的，往往比对外宣布的多更多。</p><p>据中央社，中国外交部会后声明表示，美中双方依两国元首旧金山会晤和近期通话达成的重要共识，就推进中美各领域对话合作、妥善管控分歧进行了坦诚、深入、建设性的沟通。而美国务院会后新闻稿表示，康达、柏兰向仇开明强调维持台海和平稳定的重要性，美国基于台湾关系法、美中三公报、六项保证的一中政策没有改变。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240417-%25E7%25BE%258E%25E4%25BA%259A%25E5%25A4%25AA%25E5%258A%25A9%25E5%258D%25BF%25E5%25BA%25B7%25E8%25BE%25BE%25E4%25BC%259A%25E6%2599%25A4%25E4%25B8%25AD%25E5%259B%25BD%25E5%259B%25BD%25E5%258F%25B0%25E5%258A%259E%25E5%25AE%2598%25E5%2591%2598-%25E5%25AD%25A6%25E8%2580%2585%25E7%25A7%25B0%25E4%25B8%258D%25E5%25A4%25AA%25E5%25AF%25BB%25E5%25B8%25B8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8%20-%20https%3A%2F%2Frfi.my%2FAWZD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8%20-%20https%3A%2F%2Frfi.my%2FAWZD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E4%BA%9A%E5%A4%AA%E5%8A%A9%E5%8D%BF%E5%BA%B7%E8%BE%BE%E4%BC%9A%E6%99%A4%E4%B8%AD%E5%9B%BD%E5%9B%BD%E5%8F%B0%E5%8A%9E%E5%AE%98%E5%91%98%20%E5%AD%A6%E8%80%85%E7%A7%B0%E4%B8%8D%E5%A4%AA%E5%AF%BB%E5%B8%B8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
