--- a/articles/rfi/999952.md
+++ b/articles/rfi/999952.md
@@ -1,5 +1,5 @@
-<!--1713339902000-->
-[导致五死大火揭消防违规情况严重且持续 旧患未除同区老厦再起火警](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240417-%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD-%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6)
+<!--1713345302000-->
+[欧盟立法选举在即 谁最不看好欧盟？原来是法国人](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240417-%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3-%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F-%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA)
 ------
 
-<div>17/04/2024 - 09:41</div><img src="https://s.rfi.fr/media/display/6339dab8-fc8d-11ee-a56d-005056a97e36/w:1280/p:16x9/hk-202.jpg"><p><strong>香港早前一宗5死逾40人伤的火灾，起火原因可能是烟蒂烧着大厦一楼天井(不同单位围成的露天空间)杂物或电力装置超负荷造成，而起火地点储存大量胶袋及清洁工具则令火势迅速蔓延和浓烟四起，逾半楼层的防烟门亦因失修而未能发挥阻缓作用。事件揭发，消防处发出近30万张消防安全指示中，逾六成未被遵从，当中不少涉及上述火灾大厦所处区域。        </strong></p><div><p>正当特首李家超昨(16日)天声称已要求相关部门加快执法，并会在年内修例，以加强执法及提高罚则之时，同日下午同区内一幢有52年历史的金华大厦发生大火，有一百多名居民需要疏散，期间有冷气机烧至飞堕地下，幸而未造成重大伤亡，但却是区内一星期内第二宗火警。</p><p>与游客区尖沙咀毗连的佐敦区，区内有60年历史的华丰大厦上周叁(10日)发生夺命大火，造成五死逾40人受伤。事后经传媒查问，消防处证实，大厦消防装置的年度检查已过期年半，而当局今年2月9日巡查时，并未发现火警危险。但事实上，消防处曾于2008年向由业主组成以处理大厦管理事宜的业主立桉法团发出消防安全指示，但法团以不同理由推迟限期，结果是至今仍未遵办。</p><p>对于大厦未有按消防处的指示消除安全隐患，居民指大厦内的宾馆霸占业主立桉法团而拒绝进行耗费不低的工程，身兼法团主席的宾馆东主则予以否认，并指之前已维修近叁十道防烟明，至于仍在讨论的工程，则因工程投标商临时以倍数地大幅加价，法团正在处理，未料发生火警。</p><p>另外，消防处回覆传媒时透露，处方及屋宇署一共巡查了全港逾一万幢旧式楼宇，九成半需发出安全指示，合共超过 29万张，截至上月底，有11万张已获遵办或撤销。换言之，有大约62%的个桉仍未处理，当中，以火警所在的「油(麻地)尖(沙咀)旺(角)区」占最多，有1800多幢。</p><p>本台记者曾到尖沙咀区内有不少宾馆和食肆的重庆大厦，发现仍然人流如鰂，但逃生楼梯有摆放杂物丶个别楼层的消防装置被住户衣物遮蔽丶防烟门大开等情况均有出现。</p><p>违反消防安全指示只有罚款，根据《消防安全(建筑物)条例》，如业主或拥有人无合理辩解而没有遵从消防安全指示，一经定罪，可判罚款2.5万港元，每日另处罚款2500元。</p><p>事隔一星期，特首李家超在出席会议前表示，已要求消防处及屋宇署加快执法工作，包括压缩程序等，但由于旧楼数目逾万幢，必须定下执行优次，当局正就此进行审视。</p><p>另外，港府又会修例，以加强执法和增加罚则，同时容许当局介入维修消防设备，事后再追究不同单位的经济和违规责任。他指出，保安局会在今年内向立法会提交消防条例的修订草桉，较原订时间提前两丶叁个月。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWXY.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240417-%25E5%25AF%25BC%25E8%2587%25B4%25E4%25BA%2594%25E6%25AD%25BB%25E5%25A4%25A7%25E7%2581%25AB%25E6%258F%25AD%25E6%25B6%2588%25E9%2598%25B2%25E8%25BF%259D%25E8%25A7%2584%25E6%2583%2585%25E5%2586%25B5%25E4%25B8%25A5%25E9%2587%258D%25E4%25B8%2594%25E6%258C%2581%25E7%25BB%25AD-%25E6%2597%25A7%25E6%2582%25A3%25E6%259C%25AA%25E9%2599%25A4%25E5%2590%258C%25E5%258C%25BA%25E8%2580%2581%25E5%258E%25A6%25E5%2586%258D%25E8%25B5%25B7%25E7%2581%25AB%25E8%25AD%25A6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD%20%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6%20-%20https%3A%2F%2Frfi.my%2FAWXY.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD%20%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6%20-%20https%3A%2F%2Frfi.my%2FAWXY.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWXY.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%AF%BC%E8%87%B4%E4%BA%94%E6%AD%BB%E5%A4%A7%E7%81%AB%E6%8F%AD%E6%B6%88%E9%98%B2%E8%BF%9D%E8%A7%84%E6%83%85%E5%86%B5%E4%B8%A5%E9%87%8D%E4%B8%94%E6%8C%81%E7%BB%AD%20%E6%97%A7%E6%82%A3%E6%9C%AA%E9%99%A4%E5%90%8C%E5%8C%BA%E8%80%81%E5%8E%A6%E5%86%8D%E8%B5%B7%E7%81%AB%E8%AD%A6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 10:45</div><img src="https://s.rfi.fr/media/display/c36512ec-bf69-11ee-8e73-005056a90284/w:1280/p:16x9/2024-01-08T190336Z_1637134550_RC2E2Z9ZWOZ4_RTRMADP_3_EUROPE-INVESTMENT-ACTIVISTS.JPG"><p><strong>欧洲联盟舆情民调今天公布的欧洲晴雨表调查显示，距离欧洲选举还有不到两个月的时间，法国人对欧盟表现出明显的悲观态度，而欧洲选举只引起法国少数人有兴趣。        </strong></p><div><p>据法新社今天报道说，在欧盟其他 26 个国家中，大多数受访者表示对欧盟的未来持乐观态度，其中丹麦、爱尔兰和立陶宛最为乐观。</p><p>法国是欧盟中仅次于德国的第二人口大国，也是唯一一个乐观主义者占少数（42%）的成员国，被悲观主义者（52%）超过。</p><p>法国近年来的这种趋势似乎有所发展，因为根据 2020 年底的一项调查，52% 的法国人对未来“非常”或“相当”乐观（相比之下，悲观主义者为 44%）。</p><p>在德国，乐观情绪仍然占大多数（60%），但与 2020 年（72%）相比也有所下降。</p><p>然而，欧盟并不是法国忧郁悲观情绪的唯一目标。因为如果 65% 的法国人认为“欧盟的事情正在朝着错误的方向发展”（相比之下，欧洲人的平均比例为 49%），那么更多的法国人 (76%) 认为他们正在朝着错误的方向发展。法国人多认为法国的方向错了。</p><p>法国人对个人生活水平的变化比欧洲平均水平更关心：69% 的人认为个人生活水平在过去五年中有所下降（而欧盟平均水平为 45%）。 53% 的人认为未来五年内还会下降（欧洲水平为 32%）。</p><p>欧盟人对欧盟（尤其是奥地利人和捷克人）抱有负面印象的人数也多于欧洲平均水平，并认为近年来欧盟在世界上的作用已变得“不那么重要”。</p><p>但法国人对欧洲议会的印象最差：如果41%的欧洲人对欧洲议会印象是正面的，那么只有27%的法国人对欧洲议会印象是正面的。 28% 的法国人（18% 的欧洲人）对这一重要的欧盟机构持反对意见。法国人中的大多数（53%）承认他们对欧洲选举不感兴趣，而欧盟平均有 60% 的公民对此感兴趣。</p><p>然而，绝大多数法国人（67%）表示，他们希望通过投票来续约这个总部位于斯特拉斯堡的议会，负责参与欧洲立法的通过。</p><p>关于欧盟及议会选举：只有 8% 的人知道这些选举的确切日期，这些选举是通过一轮直接普选产生的，定于 6 月 9 日在法国举行（在整个欧盟范围内于 6 月 6 日至 9 日之间举行）。 在欧洲，23%的受访者承认不知道投票何时举行，这一比例在法国上升至30%。法新社说，这显示是一个不小的问题。</p><p>当被问及法国的这种不信任时，欧洲议会发言人 Jaume Duch Guillot 强调，这“并不令人意外”。 “这是近年来的一个明显趋势，”他评论道，但不想提供任何解释。</p><p>在法国，一个非常反对欧洲建设的极右的国民联盟（RN，最右边）显然反而会是欧洲选举的赢家，最新民意调查显示，其得票率为 30-32%，远远领先于坚称拥护欧洲建设的总统马克龙的多数党名单（16-18%） ）。</p><p>据该报道，欧洲晴雨表调查是由欧洲议会委托于 2 月 7 日至 3 月 3 日对 27 个欧盟成员国的 26,411 名欧洲公民进行的。</p><p>选举后，欧洲议会总共将有 720 名代表，而目前为 705 名。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWYH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240417-%25E6%25AC%25A7%25E7%259B%259F%25E7%25AB%258B%25E6%25B3%2595%25E9%2580%2589%25E4%25B8%25BE%25E5%259C%25A8%25E5%258D%25B3-%25E8%25B0%2581%25E6%259C%2580%25E4%25B8%258D%25E7%259C%258B%25E5%25A5%25BD%25E6%25AC%25A7%25E7%259B%259F-%25E5%258E%259F%25E6%259D%25A5%25E6%2598%25AF%25E6%25B3%2595%25E5%259B%25BD%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWYH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAWYH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWYH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AC%A7%E7%9B%9F%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE%E5%9C%A8%E5%8D%B3%20%E8%B0%81%E6%9C%80%E4%B8%8D%E7%9C%8B%E5%A5%BD%E6%AC%A7%E7%9B%9F%EF%BC%9F%E5%8E%9F%E6%9D%A5%E6%98%AF%E6%B3%95%E5%9B%BD%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
