--- a/articles/rfi/999955.md
+++ b/articles/rfi/999955.md
@@ -1,5 +1,5 @@
-<!--1713316501000-->
-[以色列呼吁对伊朗导弹项目实施新的制裁](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81)
+<!--1713318302000-->
+[舒尔茨访华：未来可能是人人为己，唯一的赢家将是习近平 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240416-%E8%88%92%E5%B0%94%E8%8C%A8%E8%AE%BF%E5%8D%8E-%E6%9C%AA%E6%9D%A5%E5%8F%AF%E8%83%BD%E6%98%AF%E4%BA%BA%E4%BA%BA%E4%B8%BA%E5%B7%B1%EF%BC%8C%E5%94%AF%E4%B8%80%E7%9A%84%E8%B5%A2%E5%AE%B6%E5%8F%AF%E8%83%BD%E6%98%AF%E4%B9%A0%E8%BF%91%E5%B9%B3)
 ------
 
-<div>17/04/2024 - 01:17</div><img src="https://s.rfi.fr/media/display/acf0f842-fadc-11ee-bb8f-005056bf30b7/w:1280/p:16x9/AP24105783712299.jpg"><p><strong>在伊朗对以色列进行空袭之后，以色列4月16日呼吁对伊朗实施新的制裁。以色列外长 卡茨（Israel Katz）在社交媒体上表示，他已经联系了30多个国家，推动对伊朗导弹项目进行制裁，并宣布伊朗革命卫队为恐怖组织。        </strong></p><div><p>尽管世界各国领导人恳求缓解紧张局势，但以色列似乎决心采取军事报复措施。</p><p>以色列军方官员星期一说，德黑兰必须要为周六发射大约350枚导弹和无人机的空袭付出代价，其中许多是从伊朗本土发射的。</p><p>以色列武装部队参谋长哈勒维（Herzi Halevi）中将说，伊朗的空袭“将得到回应”。</p><p>以色列军方领导人没有细谈将做出什么回应，尽管以色列国防军发言人哈加里（Daniel Hagari）海军少将说，回应将在“我们选择的时刻”做出。</p><p>以色列发出这些强硬的言辞正值以色列最坚定的支持者美国也敦促以色列展示克制之际。华盛顿说，伊朗的导弹和无人机空袭 没有造成多少损害，这本身就是一个巨大的胜利。</p><p>美国是已经将伊朗革命卫队定为恐怖组织的几个国家之一。随着联合国制裁的到期，美国自从去年10月起已经对伊朗弹道导弹项目实施了几轮制裁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWV7.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2591%25BC%25E5%2590%2581%25E5%25AF%25B9%25E4%25BC%258A%25E6%259C%2597%25E5%25AF%25BC%25E5%25BC%25B9%25E9%25A1%25B9%25E7%259B%25AE%25E5%25AE%259E%25E6%2596%25BD%25E6%2596%25B0%25E7%259A%2584%25E5%2588%25B6%25E8%25A3%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWV7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81%20-%20https%3A%2F%2Frfi.my%2FAWV7.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWV7.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E5%91%BC%E5%90%81%E5%AF%B9%E4%BC%8A%E6%9C%97%E5%AF%BC%E5%BC%B9%E9%A1%B9%E7%9B%AE%E5%AE%9E%E6%96%BD%E6%96%B0%E7%9A%84%E5%88%B6%E8%A3%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>17/04/2024 - 01:10</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>法国世界报周二就德国总理舒尔茨对中国的访问发表了社论。在法国和德国关系疏远的背景下，法国世界报担心未来会出现人人为己的局面。法国世界报周二在社论中表示，德国总理在中国呼吁“公开和公平”的竞争，似乎，德国总理是忽视了北京只认力量较量的这个事实。如果欧洲人不团结起来作为一个整体来行动的话，就会面临被削弱的风险。                    </strong></p><div><p>法国世界报指出，2022年2月27日，即俄罗斯入侵乌克兰后三天，德国总理在德国联邦议会的讲台上庄严地宣布，“时代变了”(Zeitenwende)。</p><p>德国被迫承认多年来自己一直把赌注押在普京的理性上，把赌注押在依靠俄罗斯天然气的供应来维持德国工业的运转上，从而误入了歧途。</p><p>法国世界报表示，德国总理所说的“时代变了”不仅只涉及德国和俄国的关系。它还涉及到，在只知道弱肉强食的政权面前要捍卫民主和法治。</p><p>“时代变了”标志着“通过贸易来改变”（Wandel durch Handel）这一理论的终结。“通过贸易来改变”是德国的一个政治理论，根据该理论，通过与西方民主国家进行贸易，独裁政权必然会实现自由化。从这个意义上说，德国总理所说的时代变了，也事关中国。</p><p>然而，德国总理舒尔茨于4月14日星期日至4月16日星期二率领大型经济代表团访华显示了：当涉及与中国的关系时，舒尔茨这位德国社民党人对自己的定位与前总理默克尔是一致的，而不是与默克尔决裂。</p><p>法国世界报还指出，2023年3月，欧盟委员会主席冯德莱恩坚称需要“降低对中国的风险”，但尽管如此，许多德国企业家尤其是最大的德国企业家仍然认为，恰恰相反，主要的风险是没有足够地把赌押在雄心勃勃地要成为世界老大的全球第二大经济体中国的身上。目前在华经营的德国企业不少于5000家。</p><p><strong>“公开、公平”的竞争</strong></p><p>舒尔茨的环保部长贝尔博克（Annalena Baerbock）称习近平是“独裁者”，德国商界在“去风险”问题上存在分歧，而舒尔茨自己的政党社民党似乎相信中国可以影响俄罗斯在乌克兰问题上的立场。因此，舒尔茨在走钢丝。然而，舒尔茨呼吁中国进行“公开和公平”的竞争，似乎，德国总理忽视了北京是只认力量较量的这个事实。尽管中国的内需依然低迷，但习近平远没有做出丝毫的妥协，习近平是比以往任何时候都更加指望受到大量补贴的中国工业来征服新市场以确保中国经济有令人满意的增长。</p><p>身为中国共产党总书记的习近平事实上是一位保守派，他只信奉供给政策，他坚信，支持内需会让中国人懒惰，从而导致中国的衰落。舒尔茨是无法改变这种心态的。他应该更多地考虑众多欧洲国家对北京所持的保留意见，并从他自己做出的“时代变了”的总结中得出结论。</p><p>法国世界报的社论最后写道，2019年3月，习近平来到巴黎时，不仅受到马克龙的接见，还受到默克尔和时任欧盟委员会主席容克的接见。2024年春天，在中国国家主席准备对法国进行国事访问之前三周，德国总理访问中国。未来可能是人人为己，唯一的赢家可能是习近平。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
