--- a/articles/rfi/999963.md
+++ b/articles/rfi/999963.md
@@ -1,5 +1,5 @@
-<!--1713300302000-->
-[美国众议院本周或就援助乌克兰以色列及台湾等法案进行独立投票？](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8)
+<!--1713303902000-->
+[英国首相敦促内塔尼亚胡保持克制](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240416-%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6)
 ------
 
-<div>16/04/2024 - 22:27</div><img src="https://s.rfi.fr/media/display/f307a8a0-fc2e-11ee-bd36-005056bf30b7/w:1280/p:16x9/%E4%BC%97%E8%AE%AE%E9%99%A2%E8%AE%AE%E9%95%BF%E8%BF%88%E5%85%8B%E2%80%A7%E7%BA%A6%E7%BF%B0%E9%80%8A%EF%BC%88Mike%20Johnson%EF%BC%89.jpg"><p><strong>美国众议院议长约翰逊4月15日表示，本周将就援助乌克兰、以色列及台湾等法案进行独立投票，以推进多项立法。        </strong></p><div><p>数月以来，美国在欧洲的盟友和乌克兰领导人一直敦促美国国会授权向基辅提供更多援助，并警告说，如果没有美国的额外支持，乌克兰军队可能会在与俄罗斯军队的战斗中失去更多阵地。</p><p>周一晚间，美国国会众议长迈克‧约翰逊（Mike Johnson）在与众议院共和党议员会面时，提出了对四项独立法案进行投票的建议，其中包括为台湾提供资金、对伊朗实施更多制裁，以及允许乌克兰兑现被扣押的俄罗斯资产的法案。</p><p>约翰逊在会后说：“我们在世界各地都有像普京、习近平和伊朗这样的恐怖分子、暴君和可怕的领导人，他们都在关注美国是否会为其盟友和我们自己在全球的利益挺身而出，我们会的。”</p><p>“我们将就对以色列的援助、对乌克兰的援助、对印度-太平洋地区的援助进行投票。然后是另一项包含国家安全优先事项的措施，其中包括……对伊朗的其它制裁以及我们在此讨论已久的其它措施。”“这是一个优先事项，我确实希望本周内能完成这项工作。”</p><p>约翰逊承认说：“乌克兰问题显然是共和党方面争议最大的问题”，“我认为美国人民应该得到解释，为什么在这里提供援助符合美国人的利益。”</p><p>该方案将偏离参议院在今年2月通过的950亿美元援助方案，是否能在美国参众两院获得通过仍未可知。但约翰逊表示，将与众议院民主党领袖哈基姆‧杰弗里斯（Hakeem Jeffries）进行讨论，以争取支持。</p><p>他说：“我们将遵守72小时规则。这可能意味着，如果我们明天（4月16日）早些时候得到法案文本，那就可能是周五晚上（表决）了。”</p><p>这表明，在伊朗对美国在中东最亲密的盟友以色列发动袭击两天后，约翰逊正在采取行动，包括向乌克兰、以色列和台湾提供更多军事援助。</p><p>上周五（4月12日），约翰逊曾经前往海湖庄园（Mar-a-Lago）与前总统特朗普会晤。特朗普随后告诉媒体，他正在“研究”乌克兰援助法案。但直到本周一，特朗普尚未对约翰逊的最新提议发表评论。</p><p>美国众议员玛乔丽‧泰勒‧格林（Marjorie Taylor Greene）直言不讳地反对援助乌克兰，并威胁要把约翰逊赶下议长宝座。周一，约翰逊撇开了格林会因为他的最新提议而将他赶下台的说法。他说：“我不会把时间花在担心撤换动议上。”</p><p>周一晚间，白宫也没有立即对约翰逊的提议做出回应。周一早些时候，美国总统拜登在欢迎捷克总理彼得‧菲亚拉（Petr Fiala）访问华盛顿的讲话中呼吁国会就补充援助法案采取行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWU5.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E6%259C%25AC%25E5%2591%25A8%25E6%2588%2596%25E5%25B0%25B1%25E6%258F%25B4%25E5%258A%25A9%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%258F%258A%25E5%258F%25B0%25E6%25B9%25BE%25E7%25AD%2589%25E6%25B3%2595%25E6%25A1%2588%25E8%25BF%259B%25E8%25A1%258C%25E7%258B%25AC%25E7%25AB%258B%25E6%258A%2595%25E7%25A5%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWU5.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWU5.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%97%E8%AE%AE%E9%99%A2%E6%9C%AC%E5%91%A8%E6%88%96%E5%B0%B1%E6%8F%B4%E5%8A%A9%E4%B9%8C%E5%85%8B%E5%85%B0%E4%BB%A5%E8%89%B2%E5%88%97%E5%8F%8A%E5%8F%B0%E6%B9%BE%E7%AD%89%E6%B3%95%E6%A1%88%E8%BF%9B%E8%A1%8C%E7%8B%AC%E7%AB%8B%E6%8A%95%E7%A5%A8%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 22:24</div><img src="https://s.rfi.fr/media/display/a29874b0-e795-11ee-8688-005056bfb2b6/w:1280/p:16x9/AP24080420627281.jpg"><p><strong></strong></p><div><p>苏纳克在周二下午的电话会议中强调，“局势大幅升级不符合任何人的利益，只会加剧中东的不安全局势。” “现在是表现出冷静的时候了”。</p><p>据唐宁街发言人称，英国政府首脑表示，伊朗“表现出严重误判，在国际舞台上日益孤立，七国集团正在协调外交回应”。</p><p>苏纳克重申英国“坚定不移地支持以色列的安全和该地区的安全”，并进一步强调，他仍然“严重关注加沙不断恶化的人道主义危机”，敦促以色列尽快开辟新的人道主义途径。</p><p>英国首相进一步表示，他“对哈马斯在周末阻止该协议深感失望，该协议本可以挽救巴勒斯坦人的生命并确保人质安全获释。”</p><p>周一，英国外相卡梅伦呼吁以色列不要对伊朗进行报复，以避免局势升级。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWTz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240416-%25E8%258B%25B1%25E5%259B%25BD%25E9%25A6%2596%25E7%259B%25B8%25E6%2595%25A6%25E4%25BF%2583%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E4%25BF%259D%25E6%258C%2581%25E5%2585%258B%25E5%2588%25B6&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6%20-%20https%3A%2F%2Frfi.my%2FAWTz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6%20-%20https%3A%2F%2Frfi.my%2FAWTz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWTz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E9%A6%96%E7%9B%B8%E6%95%A6%E4%BF%83%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E4%BF%9D%E6%8C%81%E5%85%8B%E5%88%B6&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
