--- a/articles/rfi/999972.md
+++ b/articles/rfi/999972.md
@@ -1,5 +1,5 @@
-<!--1713280502000-->
-[日本三菱重工有F-35组装生产线 美国大使参观](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240416-%E6%97%A5%E6%9C%AC%E4%B8%89%E8%8F%B1%E9%87%8D%E5%B7%A5%E6%9C%89f-35%E7%BB%84%E8%A3%85%E7%94%9F%E4%BA%A7%E7%BA%BF-%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E5%8F%82%E8%A7%82)
+<!--1713284102000-->
+[继非洲毛驴之后，穿山甲又成为中华传统的牺牲品 - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240416-%E7%BB%A7%E9%9D%9E%E6%B4%B2%E6%AF%9B%E9%A9%B4%E4%B9%8B%E5%90%8E%EF%BC%8C%E7%A9%BF%E5%B1%B1%E7%94%B2%E5%8F%88%E6%88%90%E4%B8%BA%E4%B8%AD%E5%8D%8E%E4%BC%A0%E7%BB%9F%E7%9A%84%E7%89%BA%E7%89%B2%E5%93%81)
 ------
 
-<div>16/04/2024 - 16:29</div><img src="https://s.rfi.fr/media/display/8c76fd76-c9c9-11ee-a1ef-005056bfb2b6/w:1280/p:16x9/AP19060146150867.jpg"><p><strong>美国驻日大使伊曼纽尔16日访问三菱重工业公司小牧南工厂（爱知县丰山町），参观了F-35战机的组装生产线。他向媒体表示：“在（日美）合作中充分使用日本的防卫产业能力十分重要。”        </strong></p><div><p>据共同社今天报道称，美驻日大使参观三菱重工F-35组装生产线。</p><p>此前10日举行的日美首脑会议提出了两国加强防卫能力和防卫产业间合作的方针。伊曼纽尔表示，为了强化日美两国的集体安全保障，“必须考虑共同开发和共同生产等”。</p><p>小牧南工厂负责F-35的最终组装。伊曼纽尔表示，三菱重工反复改进流程，降低了组装成本，使交付日期得以提前。他还强调：“美国开发了F-35，但美方也从日本的F-35中学到了东西。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWQa.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240416-%25E6%2597%25A5%25E6%259C%25AC%25E4%25B8%2589%25E8%258F%25B1%25E9%2587%258D%25E5%25B7%25A5%25E6%259C%2589f-35%25E7%25BB%2584%25E8%25A3%2585%25E7%2594%259F%25E4%25BA%25A7%25E7%25BA%25BF-%25E7%25BE%258E%25E5%259B%25BD%25E5%25A4%25A7%25E4%25BD%25BF%25E5%258F%2582%25E8%25A7%2582&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E4%B8%89%E8%8F%B1%E9%87%8D%E5%B7%A5%E6%9C%89F-35%E7%BB%84%E8%A3%85%E7%94%9F%E4%BA%A7%E7%BA%BF%20%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E5%8F%82%E8%A7%82%20-%20https%3A%2F%2Frfi.my%2FAWQa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E4%B8%89%E8%8F%B1%E9%87%8D%E5%B7%A5%E6%9C%89F-35%E7%BB%84%E8%A3%85%E7%94%9F%E4%BA%A7%E7%BA%BF%20%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E5%8F%82%E8%A7%82%20-%20https%3A%2F%2Frfi.my%2FAWQa.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWQa.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E4%B8%89%E8%8F%B1%E9%87%8D%E5%B7%A5%E6%9C%89F-35%E7%BB%84%E8%A3%85%E7%94%9F%E4%BA%A7%E7%BA%BF%20%E7%BE%8E%E5%9B%BD%E5%A4%A7%E4%BD%BF%E5%8F%82%E8%A7%82&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 17:30</div><img src="https://s.rfi.fr/media/display/87b6f128-e5a6-11ec-8321-005056bfb2b6/w:1280/p:16x9/AP19047535489920.jpg"><p><strong>在非洲的毛驴之后，非洲的穿山甲正在成为中国传统营养医学的新的牺牲品。记得今年二月，非洲联盟决定禁止对中国出口毛驴之后，中国有媒体报道说，事实上，中国古代的医学书上明确记载着，阿胶的制作来源是牛皮，而并非是毛驴皮。可惜这么多年来每年因其皮囊而遭到无辜宰杀的数千万头非洲毛驴。                    </strong></p><div><p>同毛驴一样，穿山甲也同样没有任何药用价值，但是，尽管如此，自 2000 年代以来，穿山甲鳞片的使用导致穿山甲贩运的激增，尤其是从非洲被运往中国。在中国，穿山甲的鳞片或血液被用来制作各种药剂，包括一种据说能增强阳刚之气的药剂。而事实上，穿山甲的鳞片同我们人类的指甲一样是由角蛋白制成，它并没有任何特殊的功用。</p><p>而且，为了提高穿山甲的市场价格，人们往往活捉穿山甲，这或许就是新冠疫情初期，穿山甲曾经被认为是病毒从动物传染给人的中间宿主的原因所在。</p><p><strong>非法贩卖非洲穿山甲的路线</strong></p><p>目前世界上已知的穿山甲共有 8 种，其中有 4 种在亚洲，另外4 种在中非。 刚果盆地森林是世界第二大热带森林，由喀麦隆、中非共和国、刚果共和国、刚果民主共和国、加蓬和赤道几内亚六个国家共同拥有，这里是非洲穿山甲的主要栖息地。</p><p>原则上，穿山甲是一种受保护的动物，其贸易自 2017 年起被禁止。然而，非法捕获以及贩卖穿山甲的活动却正在蓬勃发展。据中非地区安全研究所（Institute for Security Studies）中非地区协调员奥卢沃勒-奥杰瓦莱（Oluwole Ojewale）去年发表的一份报告，这种非法贸易带来了数百万美元的收入。倘若不立刻采取措施，穿山甲面临被灭绝的危险。法广法语部记者Amelie Tulet 发自喀麦隆的报道说<strong>：</strong>“这是一个涉及数百万美元的贸易，穿山甲的肉体与鳞片的消费者主要位于亚洲，它们往往在刚果流域的森林中被捕获，由于当捕食者靠近时，穿山甲就会自动卷成团，因此很容易被捕获。之后，村民将其卖给中间商。这些哺乳动物或完整或被宰杀后，经由港口离开非洲大陆，向西途经尼日利亚，向东途经坦桑尼亚和肯尼亚，或乘飞机离开。在喀麦隆，包括《每日新闻》的马蒂亚斯-穆安德-恩加莫在内的几位记者一直在调查这种贩运活动，据他介绍，<em>例如，在机场，一名海关官员告诉我们，贩运者有时会将鳞片碾成粉末，装入牛奶罐中，以便神不知鬼不觉地通过海关 </em>。虽然穿山甲在新冠疫情爆发初期曾经饱受批评，但它在森林生态系统中事实上发挥着重要的调节作用。喀麦隆记者马蒂亚斯-穆恩德-恩加莫介绍说， ‘一只穿山甲每天要消耗大约 20 万只蚂蚁和白蚁，一只穿山甲每年要消耗大约 7000 万只蚂蚁和白蚁。我们可以看到这对刚果盆地森林的影响，对我们种植园的影响则更为重要<em>。 ’</em>到目前为止，刚果流域森林中究竟有多少只穿山甲尚且有待于统计，但是，有一点可以肯定，倘若，不立即采取措施，那么，这种动物将面临被偷猎至灭绝的危险。“</p><p><strong>如何才能有效保护面临灭绝威胁的穿山甲？</strong></p><p>尼日利亚的专家奥卢沃勒-奥杰瓦莱（Oluwole Ojewale）向法广指出，问题在于无论是在非洲当地还是在国际上都缺乏打击这种贩运背后网络的培训和资源，缺乏人力资源，包括护林员，安全执法人员等等，再就是缺乏信息与法规。因为在绝大多数国家，民众并不知道有关保护或禁止穿山甲贸易的法律"。</p><p>确实，要避免穿山甲的物种消失，一方面必须禁止并且切实地阻止非法狩猎，严厉禁止非法贸易。另一方面，还必须从消费者这端着手，因为消费这种受到保护的动物本身也是一种犯法的行为，而且这种消费并没有任何价值。</p><p><a href="http://www.cbcgdf.org/NewsShow/4936/24388.html#:~:text=1.穿山甲的外貌和生活习性&text=它们的四肢粗壮，爪子,和味觉来寻找食物。" target="_blank">中国生物多样性保护与绿色基金会的网站</a>上就明确规定，2020年起，中国将穿山甲由国家二级保护野生动物提升至一级，2020年版的《中国药典》也将穿山甲进行了移除，因为今天大家都明白，野生动物不应该被用来做药材。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
