--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713271502000-->
-[视频 奥林匹克圣火 赛艇冠军恩图斯科斯首接](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E8%A7%86%E9%A2%91-%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB-%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5)
+<!--1713273301000-->
+[菲律宾总统欢迎日本自卫队从明年起参加美菲“肩并肩”等联合军演](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240416-%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2-%E8%82%A9%E5%B9%B6%E8%82%A9-%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94)
 ------
 
-<div>16/04/2024 - 13:22</div><img src="https://s.rfi.fr/media/display/6535cae0-fbe1-11ee-8e3d-005056a97e36/w:1280/p:16x9/Flame%20olympique.JPG"><p><strong>点燃奥运圣火仪式星期二在希腊奥林匹亚的赫拉神庙遗址隆重举行，希腊女祭司把圣火传递给奥运希腊赛艇冠军法国运动员斯特凡诺斯-恩图斯科斯（Stefanos Ntouskos），请看France24报道。        </strong></p><div><p>距离巴黎奥运会还有大约100天，点燃奥运圣火仪式星期二在希腊奥林匹亚的赫拉神庙遗址隆重举行，奥运希腊赛艇冠军法国运动员斯特凡诺斯-恩图斯科斯（Stefanos Ntouskos）首次接受。</p><p>法国运动员斯特凡诺斯-恩图斯科斯是希腊奥运赛艇冠军和室外赛艇金牌得主，他在11月被选中来迎接奥运会圣火 。</p><p>主持仪式的希腊大祭司把圣火交给了斯特凡诺斯-恩图斯科斯，并请他诠释她早些时候激发的来自上帝的和平信息。</p><p>法国奥运冠军斯特凡诺斯-恩图斯科斯高举这支火炬，并且跑几米将火炬传递给奥运游泳冠军法国女选手洛尔·马诺杜，启动奥运圣火巴黎之旅，奥运圣火在5月8日到达马赛。</p><p>女祭司释放一只白鸽子，这只鸽子在古老的奥林匹亚体育场展翅高飞。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWNt.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E8%25A7%2586%25E9%25A2%2591-%25E5%25A5%25A5%25E6%259E%2597%25E5%258C%25B9%25E5%2585%258B%25E5%259C%25A3%25E7%2581%25AB-%25E8%25B5%259B%25E8%2589%2587%25E5%2586%25A0%25E5%2586%259B%25E6%2581%25A9%25E5%259B%25BE%25E6%2596%25AF%25E7%25A7%2591%25E6%2596%25AF%25E9%25A6%2596%25E6%258E%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5%20-%20https%3A%2F%2Frfi.my%2FAWNt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5%20-%20https%3A%2F%2Frfi.my%2FAWNt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWNt.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 15:00</div><img src="https://s.rfi.fr/media/display/9bebb08e-b471-11ee-94ac-005056bf30b7/w:1280/p:16x9/AP24015603830995.jpg"><p><strong>菲律宾总统马科斯4月15日欢迎日本自卫队从明年起正式参加美菲两军实施的“肩并肩”等联合演习，：“我认为日本参加是很好的行动”。        </strong></p><div><p>共同社报道，提到中国，马科斯谴责称，最近菲律宾在南海“遭受了非法的、攻击性的不负责任行为”。他表示对日本自卫队正式参加美菲联合演习“没有异议”，强调日美菲朝着“维护和平稳定与航行自由，彻底遵守国际法”的目标，“能够最大限度地运用所拥有的力量”。</p><p>马科斯11日出席了在美国华盛顿召开的日美菲三国首脑会谈，就设立人道主义援助和应对灾害的三国演习达成共识，发布声明，明年三国演习将加入美菲“肩并肩”等联合演习中。</p><p>在记者会上，马科斯就方便日本自卫队参加联合演习的日菲间的《互惠准入协定》（RAA）透露说，谈判没有争议点，预计很快就能签署。</p><p>“肩并肩”是美菲两军每年举行的最大规模演习。今年将于4月22日至5月10日实施，预计约1.7万名官兵参加。马科斯指出：“计划首次举行网络安全保障与指挥统制训练，将是最复杂、规模最大的演习。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWP1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240416-%25E8%258F%25B2%25E5%25BE%258B%25E5%25AE%25BE%25E6%2580%25BB%25E7%25BB%259F%25E6%25AC%25A2%25E8%25BF%258E%25E6%2597%25A5%25E6%259C%25AC%25E8%2587%25AA%25E5%258D%25AB%25E9%2598%259F%25E4%25BB%258E%25E6%2598%258E%25E5%25B9%25B4%25E8%25B5%25B7%25E5%258F%2582%25E5%258A%25A0%25E7%25BE%258E%25E8%258F%25B2-%25E8%2582%25A9%25E5%25B9%25B6%25E8%2582%25A9-%25E7%25AD%2589%25E8%2581%2594%25E5%2590%2588%25E5%2586%259B%25E6%25BC%2594&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94%20-%20https%3A%2F%2Frfi.my%2FAWP1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94%20-%20https%3A%2F%2Frfi.my%2FAWP1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWP1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8F%B2%E5%BE%8B%E5%AE%BE%E6%80%BB%E7%BB%9F%E6%AC%A2%E8%BF%8E%E6%97%A5%E6%9C%AC%E8%87%AA%E5%8D%AB%E9%98%9F%E4%BB%8E%E6%98%8E%E5%B9%B4%E8%B5%B7%E5%8F%82%E5%8A%A0%E7%BE%8E%E8%8F%B2%E2%80%9C%E8%82%A9%E5%B9%B6%E8%82%A9%E2%80%9D%E7%AD%89%E8%81%94%E5%90%88%E5%86%9B%E6%BC%94&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
