--- a/articles/rfi/999983.md
+++ b/articles/rfi/999983.md
@@ -1,5 +1,5 @@
-<!--1713267901000-->
-[德中首脑会 法新着重朔尔茨盼对乌的公正和平 官媒强调习近平称互不构成安全威胁 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240416-%E5%BE%B7%E4%B8%AD%E9%A6%96%E8%84%91%E4%BC%9A-%E6%B3%95%E6%96%B0%E7%9D%80%E9%87%8D%E6%9C%94%E5%B0%94%E8%8C%A8%E7%9B%BC%E5%AF%B9%E4%B9%8C%E5%85%8B%E5%85%B0%E7%9A%84%E5%85%AC%E6%AD%A3%E5%92%8C%E5%B9%B3-%E5%AE%98%E5%AA%92%E5%BC%BA%E8%B0%83%E4%B9%A0%E8%BF%91%E5%B9%B3%E7%A7%B0%E4%BA%92%E4%B8%8D%E6%9E%84%E6%88%90%E5%AE%89%E5%85%A8%E5%A8%81%E8%83%81)
+<!--1713271502000-->
+[以色列战时内阁仍在讨论军事反击伊朗但避免大战](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240416-%E4%BB%A5%E8%89%B2%E5%88%97%E6%88%98%E6%97%B6%E5%86%85%E9%98%81%E4%BB%8D%E5%9C%A8%E8%AE%A8%E8%AE%BA%E5%86%9B%E4%BA%8B%E5%8F%8D%E5%87%BB%E4%BC%8A%E6%9C%97%E4%BD%86%E9%81%BF%E5%85%8D%E5%A4%A7%E6%88%98)
 ------
 
-<div>16/04/2024 - 13:14</div><img src="https://s.rfi.fr/media/display/db3c9280-fbd4-11ee-b9b2-005056a97e36/w:1280/p:16x9/2024-04-16T092011Z_1344172512_RC2K77AQBNR7_RTRMADP_3_CHINA-GERMANY.JPG"><p><strong>中国国家主席习近平16日与到访的德国总理朔尔茨（Olaf Scholz）会晤。中国媒体报道强调出习近平表示，中徳互不构成安全威胁，并指中国出口产品缓解全球通胀压力。法新社报则着重朔尔茨提及乌俄战争，盼双方对乌克兰公正的和平做出更多贡献。                    </strong></p><div><p>朔尔茨本月14日抵达重庆，开启任内第2次访华。在会晤习近平前，朔尔茨先后访问重庆和上海，期间参观氢动力生产设施，以及德国化工巨头科思创在当地的绿色和可持续技术研发基地。</p><p>据法新社今天16日报道称，德国总理今访北京，朔尔茨面临着一个德国对中国政策平衡的问题。他打算加强德国与德国主要贸易伙伴中国的经济联系，同时代表欧盟希望减少在经济上对这个亚洲巨人的依赖。</p><p>外界注意到，肖尔茨昨天参访上海同济大学时，曾透露他对欧洲进口中国汽车的观点。他认为，欧洲市场对中国汽车应开放且公平，但重要的前提是必须维持公平竞争，即“不倾销，不生产过剩与不侵权”。</p><p style="text-align:start">朔尔茨今天在北京钓鱼台外交大楼与习近平会面，据他的随团官员透露，他要与习近平讨论如何“进一步为乌克兰公正的和平做出贡献”。法新社早些时候报导指，朔尔茨在社群媒体平台X（前推特）上发文表示：“我与习主席的会面还将重点讨论如何为乌克兰公正的和平做出更多贡献。”</p><p style="text-align:start">在乌克兰危机上，中国呼吁对话，反对使用核武器，并敦促尊重“所有国家”的领土完整，该报道解读称这意味着乌克兰也包括在内。但北京从未公开谴责莫斯科入侵乌克兰，中国经常呼吁考虑各方的安全关切，包括俄罗斯对北约的安全关切。</p><p style="text-align:start">按照德国总理办公室提供的对话文件，朔尔茨对习近平说：“俄罗斯对乌克兰的侵略战争和俄罗斯的武装对欧洲安全产生了非常重大的负面影响。” 朔尔兹称“它们直接影响我们的根本利益。” 同时“它们间接损害了整个国际秩序，因为它们违反了《联合国宪章》的一项原则即国家边界不可侵犯的原则。”</p><p style="text-align:start">十多年来，中国和俄罗斯的关系日益密切，因为两国在国际舞台上共同谴责西方霸权。</p><p style="text-align:start">自乌克兰战争爆发以来，中国与俄罗斯两国加强了经济、军事和外交合作。 俄罗斯外交部长拉夫罗夫上周还到访北京。</p><p style="text-align:start">法新社指出，朔尔茨还与习近平讨论了双边合作领域，特别是气候领域。德方表示：“只有共同努力，我们才能找到阻止气候变化的解决方案，并以社会公平的方式管理绿色能源转型。”</p><p>据中国官媒中央电视台报道，习近平认为，为了应对国际社会面临的“日益增长的风险和挑战”，“大国之间的合作”是“不可或缺的”。习近平表示，“中国和德国分别是世界第二和第三大经济体，（......）巩固和发展中德关系的重要性超出双边关系范围，对亚欧大陆乃至全世界产生重要影响。”</p><p>习近平还说，中德之间“没有根本利益冲突，彼此不构成安全威胁”，只要双方坚持相互尊重，求同存异，交流互鉴，合作共赢，中德关系必将继续行稳致远。习近平又表示，要从长远和战略角度，全方位看待和发展双边关系，把握中德全方位战略伙伴共识。</p><p>此外，据中方释出的声明，其中并没有直接提到台海局势。不过，肖尔茨在上海时曾隐约提及安全议题，称“小国不应该生活在对大国的恐惧中”，各方也不应以武力改变边界。他说：“如果我们的邻居是一个高大、健壮、肌肉强壮的人，那我们总是会想打个招呼，确保他不会伤害我们。”上述发言并未点名中国。</p><p>谈及俄乌战争，央视报道习近平认为，要把握几个原则：一要以和平稳定的大局为重，不要谋求一己私利；二要为局势降温，不要拱火浇油；三要为恢复和平积累条件，不要进一步激化矛盾；四要减少对世界经济的负面影响，不要破坏全球产业链供应链稳定。</p><p>今年是中德建立全方位战略伙伴关系10周年，中国外交部发言人此前表示，中方愿同德方以此访为契机，增进理解信任，深化务实合作，秉持相互尊重、平等相待、互利共赢、求同存异的原则，推动中德关系取得更大发展，共同为世界和平与繁荣作出更大贡献。</p><p>在朔尔茨访华之际，德国的许多西方盟友在一系列贸易问题上与中国对抗。欧盟正在对中国太阳能电池板、电动车和风力涡轮机的国家援助进行一系列调查。同时，美国正在调查中国汽车技术带来的国家安全风险。</p><p style="text-align:left">德国政府先前曾表示，预期双方讨论欧盟去年对中国电动车展开反补贴调查、中国产能过剩，以及德国企业在中国市场面对不公平竞争等问题，相信北京会争取德国不要支持欧盟对华电动车征收惩罚性关税。</p><p style="text-align:left">在周二，朔尔茨也将会见中国总理李强，以及会晤德中经济委员会并举行新闻发布会。</p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%A4%8F%E6%A6%95/" title="夏榕">夏榕</a></div></div></div></div>
+<div>16/04/2024 - 14:12</div><img src="https://s.rfi.fr/media/display/00e48a06-fbc1-11ee-8cf4-005056a90284/w:1280/p:16x9/2024-03-17T170954Z_518572443_RC2RN6AK4UMO_RTRMADP_3_ISRAEL-PALESTINIANS-ISRAEL-SCHOLZ.JPG"><p><strong>以色列战时内阁应当于16日今天再次召开会议讨论如何报复伊朗的方案。在15日的内阁会议上，以色列战时内阁讨论了针对直接袭击以色列的伊朗的报复措施，讨论时间约为三个小时。 《以色列时报》等当地报纸报道称，该内阁政府讨论了几种不会导致地区战争的选择。        </strong></p><div><p>据读卖新闻今天报道称，以色列战时内阁继续就针对伊朗的报复措施进行讨论，有避免战争的多种选择。</p><p>该报道引述《华盛顿邮报》消息，他们正在考虑如何在不造成众多死亡的情况下进行报复。这些攻击包括对伊朗设施和网络攻击的可能性。美国有线电视新闻网消息称，除了军事回应外，美国还确认了在外交上孤立伊朗的措施。</p><p>以色列陆军参谋长赫齐·哈勒维15日视察了遭到伊朗袭击的以色列空军基地，他说，“伊朗将受到与伊朗实施的袭击相称的报复。”</p><p>国际社会越来越多的呼吁要求以色列做出克制反应。 15日，美国总统拜登强调了对以色列的支持，但也表示，“我想阻止冲突进一步升级”。他是在白宫与伊拉克总理会面开始时发表上述讲话的。</p><p>英国首相苏纳克15日也在英国议会呼吁“各方”保持克制，并表示有意尽快与以色列总理内塔尼亚胡举行会谈。</p><p>法国总统马克龙15日对法国电视台表示，“我们所希望的是我们将尽一切可能避免紧张局势升级”，并表示将与七国集团(G7)国家合作，敦促以色列保持克制。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWOT.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240416-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E6%2588%2598%25E6%2597%25B6%25E5%2586%2585%25E9%2598%2581%25E4%25BB%258D%25E5%259C%25A8%25E8%25AE%25A8%25E8%25AE%25BA%25E5%2586%259B%25E4%25BA%258B%25E5%258F%258D%25E5%2587%25BB%25E4%25BC%258A%25E6%259C%2597%25E4%25BD%2586%25E9%2581%25BF%25E5%2585%258D%25E5%25A4%25A7%25E6%2588%2598&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E6%88%98%E6%97%B6%E5%86%85%E9%98%81%E4%BB%8D%E5%9C%A8%E8%AE%A8%E8%AE%BA%E5%86%9B%E4%BA%8B%E5%8F%8D%E5%87%BB%E4%BC%8A%E6%9C%97%E4%BD%86%E9%81%BF%E5%85%8D%E5%A4%A7%E6%88%98%20-%20https%3A%2F%2Frfi.my%2FAWOT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E6%88%98%E6%97%B6%E5%86%85%E9%98%81%E4%BB%8D%E5%9C%A8%E8%AE%A8%E8%AE%BA%E5%86%9B%E4%BA%8B%E5%8F%8D%E5%87%BB%E4%BC%8A%E6%9C%97%E4%BD%86%E9%81%BF%E5%85%8D%E5%A4%A7%E6%88%98%20-%20https%3A%2F%2Frfi.my%2FAWOT.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWOT.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E6%88%98%E6%97%B6%E5%86%85%E9%98%81%E4%BB%8D%E5%9C%A8%E8%AE%A8%E8%AE%BA%E5%86%9B%E4%BA%8B%E5%8F%8D%E5%87%BB%E4%BC%8A%E6%9C%97%E4%BD%86%E9%81%BF%E5%85%8D%E5%A4%A7%E6%88%98&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
