--- a/articles/rfi/999984.md
+++ b/articles/rfi/999984.md
@@ -1,5 +1,5 @@
-<!--1713266102000-->
-[围绕俄罗斯核泄露事件的几点疑问？ - 环保天地](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%8E%AF%E4%BF%9D%E5%A4%A9%E5%9C%B0/20240416-%E5%9B%B4%E7%BB%95%E4%BF%84%E7%BD%97%E6%96%AF%E6%A0%B8%E6%B3%84%E9%9C%B2%E4%BA%8B%E4%BB%B6%E7%9A%84%E5%87%A0%E7%82%B9%E7%96%91%E9%97%AE)
+<!--1713271502000-->
+[视频 奥林匹克圣火 赛艇冠军恩图斯科斯首接](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240416-%E8%A7%86%E9%A2%91-%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB-%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5)
 ------
 
-<div>16/04/2024 - 12:50</div><img src="https://s.rfi.fr/media/display/48cf8a14-fbd5-11ee-ac1e-005056bfb2b6/w:1280/p:16x9/661544825ce5b.jpg"><p><strong>俄罗斯远东城市哈巴罗夫斯克地区4月5日进入紧急状态，原因是当地发现了一个核辐射源，当地监测到的核辐射值超过正常值的1600倍。路透社引述俄罗斯媒体报道了上述消息之后，引发了中国东北临近俄罗斯边界的民众的恐慌。因为，事实上，哈巴罗夫斯克离黑龙江抚远县仅仅68公里，鉴于俄罗斯在切尔诺贝利核事故事件上犯有前科，此一突如其来的核泄露事件自然引发边界地区民众的恐慌。                    </strong></p><div><p>之后，中国驻哈巴罗夫斯克总领事馆在4月9日发布公告说，核泄露事故已经获得解决，事故的起因是一个工业探伤仪上的铯137胶囊包装受损引发核辐射，目前已被转送至专业监管机构，市政府宣布从4月10日开始解除该市实施的局部紧急状态法。</p><p><strong>中国媒体为何集体失声？</strong></p><p>不过，中国网民对此一事件的质疑并未因此而中止，首先中国官媒为何迟迟没有对事件加以报道？事实上，在路透社4月5日报道哈巴罗夫斯克部分地区进入紧急状态之前，早有居住在俄罗斯的华人在网络社交媒体上披露说，核泄露事故从三月底就已经发生，而中国媒体一直到4月8日才陆续就此作出报道。</p><p>莫非是为了避免在俄罗斯外长拉夫罗夫到访北京之前发表负面新闻？就连中国官媒《环球时报》特约评论员胡锡进似乎也对中国媒体的这种反应表示不满，他在微博上说，“遇到这种事情，边境这边的中国当地媒体应该发声，及时跟进报道，越是详细透明，这边的人，还有网友们越不会猜东猜西，个别人想搞舆情也更难。”有黑龙江佳木斯网民在微信上质疑道：“辐射的范围到底有多大，俄方并没有公布，相关地区检测到的核辐射具体数值是多少，也不知道，源头是怎么泄露的，有几个源头，依然是不知道。俄方何以将掠走的土地，也就是跟他国毗邻的边境地区作为核试验基地，堆放核废料，陈旧核设施废弃不处理，这些就更加不明白了。”</p><p><strong>铯</strong><strong>137</strong><strong>胶囊有何用途？</strong></p><p>那么，倘若俄罗斯当地政府公布的消息属实，铯137胶囊与核试验和核废料并没有直接的关联，铯(Cs）是一种呈银色的软金属。铯137是核弹、核武器试验和核反应堆内核裂变的副产品之一，它会释放伽玛射线，因此被常用于校对医治癌症的放射治疗设备，也可以用于校对用来监测放射治疗人员及病人所接受的辐射水平的辐射监测仪器。铯137也用于监测工业产品的重量、厚度和密度以及探测焊接点和金属管道的裂缝。</p><p>近年来，在巴西、澳大利亚、泰国等国家也有发生过铯137胶囊遗失的先例。去年一月底，澳洲一枚装有放射性物质的微型胶囊据报从一处矿场运至储存设施时，在途中自卡车掉落遗失，澳洲消防部门警告民众倘若发现胶囊，不要用手拿取，而应及时通告有关部门。不过，澳大利亚最终居然大海捞针，找回了这枚体积相当于一枚硬币的胶囊。</p><p><strong>铯</strong><strong>137</strong><strong>胶囊辐射对环境及民众健康有何影响？</strong></p><p>铯137对人体的影响取决于其辐射强度、暴露时间和受影响的人体细胞种类等。如果胶囊破损，风险更大，因为铯137是一个非常高辐射的放射源，可能会引起急性放射病症，如恶心，疲倦，呕吐及毛发脱落等。如果受到约1希沃特辐射剂量的直接照射，甚至可以引致死亡。</p><p>去年，澳大利亚全国都在寻找被丢失的铯137胶囊时，澳大利亚放射性科学研究人员就提出了自然界和人类面临的各种风险。悉尼大学医学院医学影像科学教授戴尔-贝利解释说，铯 137 的 "半衰期"约为 30 年，但三十年之后，其辐射度继续超过环境中的天然辐射水平，大约将延迟约300 年"。</p><p>贝利教授说，这种放射性物质 "会发出贝塔射线和伽马射线"。据他说，装有铯 137 的胶囊不能滤除β射线，只能滤除伽马射线。伽马射线只有在近距离和长时间照射的情况下才会造成损害。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9D%A8%E7%9C%89/" title="杨眉">杨眉</a></div></div></div></div>
+<div>16/04/2024 - 13:22</div><img src="https://s.rfi.fr/media/display/6535cae0-fbe1-11ee-8e3d-005056a97e36/w:1280/p:16x9/Flame%20olympique.JPG"><p><strong>点燃奥运圣火仪式星期二在希腊奥林匹亚的赫拉神庙遗址隆重举行，希腊女祭司把圣火传递给奥运希腊赛艇冠军法国运动员斯特凡诺斯-恩图斯科斯（Stefanos Ntouskos），请看France24报道。        </strong></p><div><p>距离巴黎奥运会还有大约100天，点燃奥运圣火仪式星期二在希腊奥林匹亚的赫拉神庙遗址隆重举行，奥运希腊赛艇冠军法国运动员斯特凡诺斯-恩图斯科斯（Stefanos Ntouskos）首次接受。</p><p>法国运动员斯特凡诺斯-恩图斯科斯是希腊奥运赛艇冠军和室外赛艇金牌得主，他在11月被选中来迎接奥运会圣火 。</p><p>主持仪式的希腊大祭司把圣火交给了斯特凡诺斯-恩图斯科斯，并请他诠释她早些时候激发的来自上帝的和平信息。</p><p>法国奥运冠军斯特凡诺斯-恩图斯科斯高举这支火炬，并且跑几米将火炬传递给奥运游泳冠军法国女选手洛尔·马诺杜，启动奥运圣火巴黎之旅，奥运圣火在5月8日到达马赛。</p><p>女祭司释放一只白鸽子，这只鸽子在古老的奥林匹亚体育场展翅高飞。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWNt.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240416-%25E8%25A7%2586%25E9%25A2%2591-%25E5%25A5%25A5%25E6%259E%2597%25E5%258C%25B9%25E5%2585%258B%25E5%259C%25A3%25E7%2581%25AB-%25E8%25B5%259B%25E8%2589%2587%25E5%2586%25A0%25E5%2586%259B%25E6%2581%25A9%25E5%259B%25BE%25E6%2596%25AF%25E7%25A7%2591%25E6%2596%25AF%25E9%25A6%2596%25E6%258E%25A5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5%20-%20https%3A%2F%2Frfi.my%2FAWNt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5%20-%20https%3A%2F%2Frfi.my%2FAWNt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWNt.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%86%E9%A2%91%20%E5%A5%A5%E6%9E%97%E5%8C%B9%E5%85%8B%E5%9C%A3%E7%81%AB%20%E8%B5%9B%E8%89%87%E5%86%A0%E5%86%9B%E6%81%A9%E5%9B%BE%E6%96%AF%E7%A7%91%E6%96%AF%E9%A6%96%E6%8E%A5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
