--- a/articles/rfi/999994.md
+++ b/articles/rfi/999994.md
@@ -1,5 +1,5 @@
 <!--1713260703000-->
-[朔尔兹见习近平 敦促中国为乌克兰公正和平努力](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E6%9C%94%E5%B0%94%E5%85%B9%E8%A7%81%E4%B9%A0%E8%BF%91%E5%B9%B3-%E6%95%A6%E4%BF%83%E4%B8%AD%E5%9B%BD%E4%B8%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E5%85%AC%E6%AD%A3%E5%92%8C%E5%B9%B3%E5%8A%AA%E5%8A%9B)
+[王毅与伊朗外长通电话](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240416-%E7%8E%8B%E6%AF%85%E4%B8%8E%E4%BC%8A%E6%9C%97%E5%A4%96%E9%95%BF%E9%80%9A%E7%94%B5%E8%AF%9D)
 ------
 
-<div>16/04/2024 - 10:08</div><img src="https://s.rfi.fr/media/display/29c15fae-fa71-11ee-beaf-005056bfb2b6/w:1280/p:16x9/2024-04-14T013607Z_165103774_RC2067AB98EM_RTRMADP_3_CHINA-GERMANY.JPG"><p><strong>德国总理朔尔茨周二今天在北京会见中国国家主席习近平时表示，他希望与中国讨论如何在乌克兰实现“公正和平”。        </strong></p><div><p>朔尔茨 (Olaf Scholz) 于周日在一个由部长和商界领袖组成的大型代表团的陪同下抵达中国。 这是朔尔兹自2021年底上任以来第二次访问这个亚洲国家。</p><p>据法新社今天报道称，在为期三天的访问中，德国总理已经访问了大城市重庆（西南）、经济首都上海，现在又抵访北京，朔尔兹面临着一个德国对中国政策平衡的问题。他打算加强德国与德国主要贸易伙伴中国的经济联系，同时代表欧盟希望减少在经济上对这个亚洲巨人的依赖。</p><p>朔尔兹今天在北京钓鱼台外交大楼与习近平会面时表示，根据他的随团官员透露，他要与习近平讨论如何“进一步为乌克兰的公正和平做出贡献”。</p><p>在乌克兰危机上，中国呼吁对话，反对使用核武器，并敦促尊重“所有国家”的领土完整，该报道解读称这意味着乌克兰也包括在内。</p><p>但北京从未公开谴责莫斯科入侵乌克兰，中国经常呼吁考虑各方的安全关切，包括俄罗斯对北约的安全关切。</p><p>根据德国总理办公室提供的对话文件，朔尔茨对习近平说：“俄罗斯对乌克兰的侵略战争和俄罗斯的武装对欧洲安全产生了非常重大的负面影响。” 朔尔兹称“它们直接影响我们的根本利益。”</p><p>据朔尔茨说：“它们间接损害了整个国际秩序，因为它们违反了《联合国宪章》的一项原则即国家边界不可侵犯的原则。”</p><p>十多年来，中国和俄罗斯的关系日益密切，因为两国在国际舞台上共同谴责西方霸权。</p><p>自乌克兰入侵以来，中国与俄罗斯两国加强了经济、军事和外交合作。 俄罗斯外交部长拉夫罗夫上周访问北京。</p><p>朔尔茨还与习近平讨论了双边合作领域，特别是气候领域。</p><p>据德国官方称，“只有共同努力，我们才能找到阻止气候变化的解决方案，并以社会公平的方式管理绿色能源转型。”</p><p>据中国国家电视台中央电视台消息，中国国家主席习近平认为，为了应对国际社会面临的“日益增长的风险和挑战”，“大国之间的合作”是“不可或缺的”。习近平表示，“中国和德国分别是世界第二和第三大经济体”。 “巩固和发展中德关系的重要性超出双边关系范围，对亚欧大陆乃至全世界产生重要影响。”</p><p>中国中央电视台播放了两人会见后在花树、石桥和中国传统建筑红色廊柱中漫步行走的视频。</p><p>据法新社称，朔尔茨定于今天下午与中国总理李强会面，会见中德经济委员会，然后在晚上向新闻界发表讲话。</p><p>朔此行正值欧盟与中国陷入对峙之际，欧盟指责中国向欧洲充斥着从电动汽车到风力涡轮机和太阳能电池板等低成本产品，从而扭曲了欧洲市场。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWKx.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E6%259C%2594%25E5%25B0%2594%25E5%2585%25B9%25E8%25A7%2581%25E4%25B9%25A0%25E8%25BF%2591%25E5%25B9%25B3-%25E6%2595%25A6%25E4%25BF%2583%25E4%25B8%25AD%25E5%259B%25BD%25E4%25B8%25BA%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E5%2585%25AC%25E6%25AD%25A3%25E5%2592%258C%25E5%25B9%25B3%25E5%258A%25AA%25E5%258A%259B&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%A7%81%E4%B9%A0%E8%BF%91%E5%B9%B3%20%E6%95%A6%E4%BF%83%E4%B8%AD%E5%9B%BD%E4%B8%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E5%85%AC%E6%AD%A3%E5%92%8C%E5%B9%B3%E5%8A%AA%E5%8A%9B%20-%20https%3A%2F%2Frfi.my%2FAWKx.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%A7%81%E4%B9%A0%E8%BF%91%E5%B9%B3%20%E6%95%A6%E4%BF%83%E4%B8%AD%E5%9B%BD%E4%B8%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E5%85%AC%E6%AD%A3%E5%92%8C%E5%B9%B3%E5%8A%AA%E5%8A%9B%20-%20https%3A%2F%2Frfi.my%2FAWKx.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWKx.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%9C%94%E5%B0%94%E5%85%B9%E8%A7%81%E4%B9%A0%E8%BF%91%E5%B9%B3%20%E6%95%A6%E4%BF%83%E4%B8%AD%E5%9B%BD%E4%B8%BA%E4%B9%8C%E5%85%8B%E5%85%B0%E5%85%AC%E6%AD%A3%E5%92%8C%E5%B9%B3%E5%8A%AA%E5%8A%9B&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>16/04/2024 - 10:50</div><img src="https://s.rfi.fr/media/display/842f764e-dcd3-11ee-9ecb-005056bf30b7/w:1280/p:16x9/AP24067091767270.jpg"><p><strong>据中国官方新华社周二称，中国外交部长王毅与伊朗外长阿卜杜拉希安通电话.中国官方媒体称德黑兰在对伊朗发动前所未有的袭击以色列领土后再次表达了“克制的愿望”。        </strong></p><div><p>法新社今天引据中国新华社称，阿卜杜拉希安向王毅通报了伊朗对以色列驻叙利亚大马士革使馆附属建筑遭到轰炸的立场。</p><p>据中国媒体说，伊朗外交官认为，联合国安理会“没有对这次以色列的袭击做出必要的反应”，“伊朗因此有权对侵犯伊朗主权的行为进行自卫。”</p><p>4月1日，伊朗意识形态大军革命卫队的7名成员在伊朗驻大马士革领事馆附属建筑遭袭击中丧生。</p><p>作为回应，德黑兰在周六至周日夜间首次对以色列领土发动直接攻击。</p><p>以色列承诺对该袭击做出回应。</p><p>不过，伊朗外长阿卜杜拉希安保证，伊朗“愿意表现出克制”，无意加剧紧张局势。 他指出，该地区局势已经“非常敏感”。</p><p>据新华社称，王毅表示，北京“强烈谴责并坚决反对”对伊朗领事馆附件的袭击，认为这是“严重违反国际法”。</p><p>仍据新华社指，王毅说，“看来伊朗有能力处理好局势，防止该地区出现更多动荡，同时保护自己的主权和尊严。”</p><p>最后，新华社称，阿卜杜拉希安告诉中国同行，任何针对伊朗利益或安全的新攻击都将引发“果断、立即和重大”反应，特别是对白宫发出这一警告。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWLV.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240416-%25E7%258E%258B%25E6%25AF%2585%25E4%25B8%258E%25E4%25BC%258A%25E6%259C%2597%25E5%25A4%2596%25E9%2595%25BF%25E9%2580%259A%25E7%2594%25B5%25E8%25AF%259D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%8E%8B%E6%AF%85%E4%B8%8E%E4%BC%8A%E6%9C%97%E5%A4%96%E9%95%BF%E9%80%9A%E7%94%B5%E8%AF%9D%20-%20https%3A%2F%2Frfi.my%2FAWLV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%8E%8B%E6%AF%85%E4%B8%8E%E4%BC%8A%E6%9C%97%E5%A4%96%E9%95%BF%E9%80%9A%E7%94%B5%E8%AF%9D%20-%20https%3A%2F%2Frfi.my%2FAWLV.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWLV.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%8E%8B%E6%AF%85%E4%B8%8E%E4%BC%8A%E6%9C%97%E5%A4%96%E9%95%BF%E9%80%9A%E7%94%B5%E8%AF%9D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
