--- a/articles/rfi/999998.md
+++ b/articles/rfi/999998.md
@@ -1,5 +1,5 @@
-<!--1713258908000-->
-[中国钢铁南美洲泛滥 当地喊上关税防堵](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240416-%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%97%E7%BE%8E%E6%B4%B2%E6%B3%9B%E6%BB%A5-%E5%BD%93%E5%9C%B0%E5%96%8A%E4%B8%8A%E5%85%B3%E7%A8%8E%E9%98%B2%E5%A0%B5)
+<!--1713260703000-->
+[朔尔茨访华：魅力攻势先行 - 柏林飞鸿](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%9F%8F%E6%9E%97%E9%A3%9E%E9%B8%BF/20240416-%E6%9C%94%E5%B0%94%E8%8C%A8%E8%AE%BF%E5%8D%8E-%E9%AD%85%E5%8A%9B%E6%94%BB%E5%8A%BF%E5%85%88%E8%A1%8C)
 ------
 
-<div>16/04/2024 - 10:36</div><img src="https://s.rfi.fr/media/display/c23d79fe-154a-11ea-af1d-005056a99247/w:1280/p:16x9/amerique-latine-620x350.jpg"><p><strong>拉丁美洲的钢铁行业正面临中国的倾销，中国的钢铁倾销正在涌入南美洲市场并危及许多就业机会。 作为回应，一些濒临破产的钢厂要求征收进口税。        </strong></p><div><p>据法新社今天报道称，去年，计有1000万吨中国钢铁涌入拉美，显示同比增长44%。 20年前，中国在此仅出口8.5万吨。</p><p>根据拉丁美洲钢铁协会 (Alacero) 的数据，过去 20 年来，中国在全球钢铁市场的份额从 15% 增加到 54%。</p><p>由于中国建筑业大幅放缓，释放了产品用于出口，国际对中国钢铁行业产能过剩的担忧也有所增加。</p><p>Alacero 执行董事亚历杭德罗·瓦格纳 (Alejandro Wagner) 感叹道，“中国在拉丁美洲的影响力太大了。” 据他告诉法新社：“没有人反对国家之间的贸易，但我们只要公平贸易。”</p><p>美国财政部长耶伦在最近访问中国期间表达了对中国“生产过剩”的担忧，并表示美国“不会接受”世界充斥着中国商品而亏损。</p><p>2018年，美国对中国钢铁加征25%的关税。 智利和巴西工业界愿意效仿美国这个例子。</p><p>智利主要钢厂Huachipato、2,700名直接员工和20,000名分包商已向智利反贸易扭曲委员会提出正式请求。</p><p>位于圣地亚哥以南500公里的塔尔卡瓦诺的该公司宣布逐步暂停工厂活动，因在智利销售的中国钢材比当地钢材便宜40%而让该钢铁厂不堪重负。</p><p>该拉丁美洲钢铁协会委员会发现“有足够的证据支持中国存在倾销”，并建议征收15%的关税，而智利主要钢厂华奇帕托认为税额“不够”。智利主要钢厂公司董事 Jean Paul Sauré称，“我们并不要求政府补贴或救助。智利主要钢厂Huachipato 有能力在竞争激烈的环境中盈利。”</p><p>据法新社说，采取保护措施的决定并不容易做出。 智利于2006年与中国签署了自由贸易协定，使该国面临可能的贸易报复。</p><p>拉丁美洲地区最大的钢铁生产国巴西的情况也令人担忧。 根据 Aco Institute 的数据，去年从中国的进口增加了 50%，巴西自己的产量下降了 6.5%。</p><p>Gerdau是这家南美钢铁巨头最大的雇主之一，已经解雇了700名工人。 该公司表示，由于“面对中国钢材进口的掠夺性条件，巴西市场面临困难”，最后一批钢材于二月份离开了圣保罗的 Pindamonhangaba 工厂。该公司不愿回应法新社的提问。</p><p>巴西钢厂还要求像墨西哥对205种钢铁产品征收25%的关税。</p><p>钢铁业占墨西哥 GDP 的 1.4%，创造了 70 万个就业岗位。 根据官方数据，77.5%的出口销往美国。</p><p>在拉丁美洲，钢铁行业创造了 140 万个就业机会，这些就业机会高度专业化且难以再培训。</p><p>据拉丁美洲和加勒比委员会 (ECLAC)经济部执行秘书曼努埃尔·萨拉查-西里纳赫斯 (Manuel Salazar-Xirinachs) 向法新社解释说，对该地区的短期影响将取决于中国是否采取措施减少“过剩”产量，以及在地方层面是否采取旨在减少钢铁进口的举措。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWLP.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240416-%25E4%25B8%25AD%25E5%259B%25BD%25E9%2592%25A2%25E9%2593%2581%25E5%258D%2597%25E7%25BE%258E%25E6%25B4%25B2%25E6%25B3%259B%25E6%25BB%25A5-%25E5%25BD%2593%25E5%259C%25B0%25E5%2596%258A%25E4%25B8%258A%25E5%2585%25B3%25E7%25A8%258E%25E9%2598%25B2%25E5%25A0%25B5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%97%E7%BE%8E%E6%B4%B2%E6%B3%9B%E6%BB%A5%20%E5%BD%93%E5%9C%B0%E5%96%8A%E4%B8%8A%E5%85%B3%E7%A8%8E%E9%98%B2%E5%A0%B5%20-%20https%3A%2F%2Frfi.my%2FAWLP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%97%E7%BE%8E%E6%B4%B2%E6%B3%9B%E6%BB%A5%20%E5%BD%93%E5%9C%B0%E5%96%8A%E4%B8%8A%E5%85%B3%E7%A8%8E%E9%98%B2%E5%A0%B5%20-%20https%3A%2F%2Frfi.my%2FAWLP.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWLP.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%8D%97%E7%BE%8E%E6%B4%B2%E6%B3%9B%E6%BB%A5%20%E5%BD%93%E5%9C%B0%E5%96%8A%E4%B8%8A%E5%85%B3%E7%A8%8E%E9%98%B2%E5%A0%B5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>16/04/2024 - 11:36</div><img src="https://s.rfi.fr/media/display/8de3cb06-731e-11ed-810a-005056a97e36/w:1280/p:16x9/AP22308420140671.jpg"><p><strong>德国总理朔尔茨于本月14-16日对中国进行为期3天的访问。这是他担任总理以来时间最长的国事访问。德国媒体自然表示了多方关注。对朔尔茨周一（4月15日）在同济大学的演讲和与学生们的交流，多份媒体表示了赞扬。                    </strong></p><div><p>《法兰克福汇报》就朔尔茨在同济大学发表演讲一事指出，朔尔茨向学生们讲述了倾销、知识产权保护和他的不消费大麻等。他发出的信息很明确：他在畅所欲言。他喜欢说“谢谢”。这一回，他是真心感谢中国给了他自由表达的机会，而不必直接冒犯政治东道主。这是朔尔茨为言论自由做广告的方式。</p><p>《南德意志报》表示，朔尔茨在同济大学为知识产权保护做了广告。他还强调，俄罗斯对乌克兰发动的是侵略战争，并要求不要武力推移边界。该报指出，中国向俄罗斯提供了有力帮助，以便俄罗斯能绕开西方的制裁。中国向俄罗斯提供了所谓的军民两用物品。这是俄罗斯为其武器生产所需要的物品。朔尔茨通过与大学生交流的方式，事先从上海向北京发出了他要传达的信息，其中包括知识产权保护以及倾销对经济发展的损害等。他在上海既做了广告，又发出了警告。</p><p>德国N-TV电视台表示，德国希望在不疏远其重要贸易伙伴的情况下，更加独立于中国。朔尔茨对中国的访问有如走钢丝，在困难中寻求平衡。柏林墨卡托中国研究中心的曾格莱因（Max Zenglein）怀疑，朔尔茨在公平竞争方面能否取得任何成就。朔尔茨此行更多的是要发出一个信号。</p><p>德国巴州广播电台指出，中国电动汽车是朔尔茨访华之行的一个话题。鉴于欧盟可能对中国生产的电动汽车征收惩罚性关税，朔尔茨呼吁中国创造公平的竞争条件，但对欧盟可能采取的措施持保留态度。他呼吁中国电动汽车在欧盟获得开放市场，但不要倾销，不要生产过剩。虽然欧盟仍在对中国电动汽车进行反补贴调查，但亚洲汽车专家Jochen Siebert估计，如果个别制造商的生产受到补贴，例如通过降低工厂电价等，补贴就很难证明。如果欧盟在年中得出结论，认为倾销正在发生，其惩罚性关税就可能随之而来。上海德国商会常务董事布特克（Maximilian Butek）对此不以为然。他认为，惩罚性关税也会损害中国汽车制造商的德国供应商。他们要求的是采取对策，而不是施加惩罚性关税。</p><p>北德广播电台发现，因发生伊朗空袭以色列事件，朔尔茨此行面临很多危机，以至于没有多少睡眠时间。而随行的宝马总裁<a href="https://www.google.de/search?sca_esv=5ba0164fee2f9f16&sxsrf=ACQVn0__Wsivw2IfdcureLYzzW_siAuVdw:1713187358932&q=Oliver+Zipse&stick=H4sIAAAAAAAAAONgVuLVT9c3NEwyLyurjM8pe8RowS3w8sc9YSn9SWtOXmPU5OIKzsgvd80rySypFJLmYoOyBKX4uVB18ixi5fHPySxLLVKIyiwoTgUAMjlWYVsAAAA&sa=X&ved=2ahUKEwjhw9mfqMSFAxVIavEDHbWcBcYQzIcDKAB6BAgVEAE" target="_blank">Oliver Zipse</a>则在接受采访时表示，虽然德国的对华战略是要求去风险，但去风险并不意味着撤退。</p><p>德国《经济周刊》的印象是：朔尔茨中国之行起步时，首先在重庆访问了一家公司。朔尔茨的行程看起来像是一次重要的魅力攻势，而且不仅仅是在第一天：商务第一，顾虑第二。而这正好是发生在德国经济疲软之时。柏林墨卡托中国研究所（Mercator Institute for China Studies）首席经济学家马克斯-曾格莱因（Max Zenglein）表示：“总理此行明显是在沿袭旧有模式。”这正是中国领导层希望看到的访华之行。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9F%8F%E6%9E%97%E7%89%B9%E7%BA%A6%E8%AE%B0%E8%80%85-%E4%B8%B9%E5%85%B0/" title="柏林特约记者 丹兰">柏林特约记者 丹兰</a></div></div></div></div>
